--- a/3주차.md
+++ b/3주차.md
@@ -53,3 +53,23 @@ Scanner sc2 = new Scanner(spo);
 ```
 - spo 스트림 객체 선언 후에 Scanner 입력 클래스를 통해 응용객체 선언.
 - 스트림 사용 후에는 꼭 close를 통해 닫아주어야 한다.
+
+
+2022-12-14
+
+1. 정렬
+- 버블정렬, 선택정렬, 퀵정렬 등등 많은 정렬 방법이 있다.
+
+2. 문자열 연산
+- java는 사용자형 연산자 오버로드를 지원하지 않는다.
+- 문자열은 캡슐화된 도구이다.
+- 따라서 문자열 != 값 이다. 도구 != 값 이니까.
+
+3. 문자열과 정수 사이의 형 변환
+- String.valueOf(정수값), Integer.toString(정수값) : 정수 -> 문자열
+- Integer.parseInt(문자열) : 문자열 -> 정수
+- 많이 쓰이니까 외우기.
+
+4. 문자열 비교
+- S == S1 (비교연산자를 통한 것은 객체 비교)
+- S.equals(S1) (equals를 통한 비교는 값의 비교)
