--- a/3주차.md
+++ b/3주차.md
@@ -73,3 +73,33 @@ Scanner sc2 = new Scanner(spo);
 4. 문자열 비교
 - S == S1 (비교연산자를 통한 것은 객체 비교)
 - S.equals(S1) (equals를 통한 비교는 값의 비교)
+
+2022-12-15
+
+1. 코드 절차의 중요성
+
+2. 구조 -> 구현  
+- Top -> down  해야 하지만 처음은 Bottom -> Up
+- 구조적으로, 코드를 자르는 방법 ▽
+
+3. 함수
+1) 코드의 구현코드를 숨길 수 있다.
+2) 코드를 작게 나누어 만들 수 있다.
+3) 코드의 집중화
+4) 코드의 재사용성.
+
+4. 함수를 사용하면서
+1) 전역 변수가 많아지면 함수 사이의 결합력이 높아짐 
+	=> 서로에게 미치는 영향력이 강해짐 : 좋지 않음.
+2) 지역 변수를 최대한 사용해서 고립화를 높여야 한다.
+3) 단축키 : 해당 함수 선언 부분으로 가기 (F3), 다시 돌아가기 Alt + 왼쪽
+
+
+4. 메모리 관련
+- Data + Text
+- (스택 + 힙) + 프로세스 
+- 프로세스 실행 전에 선언된 변수 내용은 스택으로 들어가고 잠김.
+- 전체적인 부분은 힙이라고 보면 됨. (버퍼 개념)
+- 스택 부분들이 프로세스 진행 후에는 사라진다.
+- 다만, 배열의 경우 값이 아니기 때문에 참조를 하게 되는데 변수명은 무조건 스택의 영역에 존재, 배열의 공간은 힙 영역에 생성
+=> 프로세스 진행 후 배열이 사용된 후에 스택 공간이 사라지면 배열의 변수명 또한 사라진다. 하지만 힙 영역에 있던 배열의 공간은 남게 되는데 이 공간은 가비지가 된다. 이 부분은 자바가 실행 중에 지속적으로 처리한다. (좀 더 자세한 검색 필요하지만 우선순위는 아님)
