--- a/3주차.md
+++ b/3주차.md
@@ -61,7 +61,7 @@ Scanner sc2 = new Scanner(spo);
 - 버블정렬, 선택정렬, 퀵정렬 등등 많은 정렬 방법이 있다.
 
 2. 문자열 연산
-- java는 사용자형 연산자 오버로드를 지원하지 않는다.
+- java는 사용자형 연산자 오버로드를 지원하지 않는다. (+, - 등 연산자 기능)
 - 문자열은 캡슐화된 도구이다.
 - 따라서 문자열 != 값 이다. 도구 != 값 이니까.
 
@@ -102,4 +102,19 @@ Scanner sc2 = new Scanner(spo);
 - 전체적인 부분은 힙이라고 보면 됨. (버퍼 개념)
 - 스택 부분들이 프로세스 진행 후에는 사라진다.
 - 다만, 배열의 경우 값이 아니기 때문에 참조를 하게 되는데 변수명은 무조건 스택의 영역에 존재, 배열의 공간은 힙 영역에 생성
-=> 프로세스 진행 후 배열이 사용된 후에 스택 공간이 사라지면 배열의 변수명 또한 사라진다. 하지만 힙 영역에 있던 배열의 공간은 남게 되는데 이 공간은 가비지가 된다. 이 부분은 자바가 실행 중에 지속적으로 처리한다. (좀 더 자세한 검색 필요하지만 우선순위는 아님)
+=> 프로세스 진행 후 배열이 사용된 후에 스택 공간이 사라지면 배열의 변수명 또한 사라진다. 하지만 힙 영역에 있던 배열의 공간은 남게 되는데 이 공간은 가비지가 된다. 
+이 부분은 자바가 실행 중에 지속적으로 처리한다. (좀 더 자세한 검색 필요하지만 우선순위는 아님)
+
+2022-12-16
+
+1. 자바에서의 Class 는 C++에서의 struct(구조체) 와 클래스 역할을 모두 포함하고 있다.<br>
+> 사용자가 만든 데이터의 구조화를 위한 클래스 (구조체)<br>
+> 함수들을 묶어 놓기 위한 클래스<br>
+2. 이해를 위한 Stack과 Heap 영역은 후에는 너무 생각하지 말기.
+3. 기본자료형 선언을 제외한 변수 생성은 꼭 new 를 통해서 해야 한다.
+4. new 를 통해 생성하면 참조 변수가 생성된 것이다.
+5. 생성된 변수에 변수명을 선언하기 전까지는 이어지지 않는다.
+6. Exam[] exams = new Exam[3]; 은 Exam 객체 선언이 아닌 Exam형태의 값을 받는 배열을 생성한 것이다.
+7. 새로운 함수 생성 시에 불러오는 매개변수 값에 대한 재정의를 해주는 것이 좋다.
+8. 통역사 역할, 에러를 잡는 역할, 문제 해결
+
