--- a/3주차.md
+++ b/3주차.md
@@ -108,8 +108,8 @@ Scanner sc2 = new Scanner(spo);
 2022-12-16
 
 1. 자바에서의 Class 는 C++에서의 struct(구조체) 와 클래스 역할을 모두 포함하고 있다.<br>
-> 사용자가 만든 데이터의 구조화를 위한 클래스 (구조체)<br>
-> 함수들을 묶어 놓기 위한 클래스<br>
+> - 사용자가 만든 데이터의 구조화를 위한 클래스 (구조체)<br>
+> - 함수들을 묶어 놓기 위한 클래스<br>
 2. 이해를 위한 Stack과 Heap 영역은 후에는 너무 생각하지 말기.
 3. 기본자료형 선언을 제외한 변수 생성은 꼭 new 를 통해서 해야 한다.
 4. new 를 통해 생성하면 참조 변수가 생성된 것이다.
