--- a/3주차.md
+++ b/3주차.md
@@ -83,10 +83,10 @@ Scanner sc2 = new Scanner(spo);
 - 구조적으로, 코드를 자르는 방법 ▽
 
 3. 함수
-1) 코드의 구현코드를 숨길 수 있다.
-2) 코드를 작게 나누어 만들 수 있다.
-3) 코드의 집중화
-4) 코드의 재사용성.
+> - 코드의 구현코드를 숨길 수 있다.
+> - 코드를 작게 나누어 만들 수 있다.
+> - 코드의 집중화
+> - 코드의 재사용성.
 
 4. 함수를 사용하면서
 1) 전역 변수가 많아지면 함수 사이의 결합력이 높아짐 
