--- a/3주차.md
+++ b/3주차.md
@@ -89,7 +89,7 @@ Scanner sc2 = new Scanner(spo);
 > - 코드의 재사용성.
 
 4. 함수를 사용하면서
-1) 전역 변수가 많아지면 함수 사이의 결합력이 높아짐 
+1) 전역 변수가 많아지면 함수 사이의 결합력이 높아짐 <br>
 	=> 서로에게 미치는 영향력이 강해짐 : 좋지 않음.
 2) 지역 변수를 최대한 사용해서 고립화를 높여야 한다.
 3) 단축키 : 해당 함수 선언 부분으로 가기 (F3), 다시 돌아가기 Alt + 왼쪽
