--- a/4주차.md
+++ b/4주차.md
@@ -27,8 +27,8 @@
 - 개체는 Class를 통해 구현한다.
 - Class는 개체의 멤버변수와 Method로 이루어진다.
 - Method와 일반 함수의 다른 점
-> 일반 함수는 위치가 자유롭고, 단순히 구조화를 목적으로 보통 생성하기 때문에 구별이 쉽지 않다.
-> Method의 경우 해당 개체의 "행위"를 목적으로 생성한다.
+> 일반 함수는 위치가 자유롭고, 단순히 구조화를 목적으로 보통 생성하기 때문에 구별이 쉽지 않다.<br>
+> Method의 경우 해당 개체의 "행위"를 목적으로 생성한다.<br>
 > 계속 나오는 "행위"는 "이 개체가 무언가를 행동한다" 라는 것이 중요하기에 반복강조한다.
 
 3. 객체의 이모저모
@@ -54,7 +54,60 @@
 - 따라서 static 함수 내에서는 this도 사용이 불가하다.
 
 6. 생성자
+- 객체의 변수를 초기화 시키는 역할.
+- 해당 클래스의 이름을 메소드명으로 선언하면 된다.
+- Exam 변수명 = new Exam(); 처럼 객체를 생성할 때 마지막 (); 부분이 자바에서 생성자를 자동으로 호출해주는 곳이였다.
+- 이것을 내가 원하는 초기화 값으로 설정해고 싶다면 객체클래스에서 선언해주면 된다.
+- 생성자의 매개변수를 다르게 지정하여 정의할 수 있다. -> 생성자 오버로딩
+- 일종의 메소드라 할 수 있지만 메소드와는 다르다. (썸인가..?)
+- 이유 1 : 반드시 클래스명과 동일하게 정의해야 하고
+- 이유 2 : 생성자 앞에는 접근제어자만 올 수 있다. (static 노노해)
+- 이유 3 : 반환값이 없기때문에 void나 자료형을 작성하지 않는다.
+- 한번 짚고 기억에 남겨두는 정도로 알아보자. (많이 쓰게 될거니까)
 
+## 2022-12-20
+
+# 1. 객체지향의 3요소 - 캡슐화, 상속, 다형성
+
+# 2. 캡슐화에 대한 좀 더 정확한 이해
+
+1. 캡슐화의 보편적인 정의 : 데이터 구조와 메소드들을 모아두는 것.
+- 하지만 데이터 구조가 없다면? 아니면 데이터 구조만 존재한다면?
+- 뉴렉쌤의 정의 : 역할(행위)를 가지고 있는 구성요소
+
+2. '캡슐이 깨진다'의 의미 : 해당 캡슐의 변수나 메소드가 다른 캡슐에 영향을 주거나, 다른 캡슐에 의해 영향을 받게 되는 일.
+
+3. 깨지지 않게 하기 위해선 접근 제어 지시자를 통해 제어해야 한다.
+- private : 해당 객체(캡슐)내에서만 접근 가능
+- public : 공공연하게~
+- protected, default도 있지만 오늘은 여기까지만.
+
+# 3. 오버로드
+
+1. 메소드끼리 같은 이름을 가지게 되면 오버로드라고 한다. (과적)
+
+2. 받는 인자의 차이에 따라 옵션을 가지게 되는데 순정을 기본함수, 옵션을 가진 함수는 오버로드 함수라 지칭한다.
+
+3. 오버로드를 생성하게 되면 두 개 이상의 메소드가 같은 부분을 가지고 있게 되는데 기본 함수에 오버로드 함수를 사용하는 식으로 반복되지 않게 정리해주는 것이 좋다.
+
+4. 생성자도 똑같이 오버로드를 이용할 수 있다.
+
+5. 생성자 오버로드에서 기본 생성자에서 초기화해줄 때 본인 개체를 가르키기 위해서 this를 사용하게 되는데
+그 전에는 사용되어서는 안된다.
+
+# 4. 캡슐화를 유지하는 코드 재사용법, 객체 합성 (이 단어도 직역일 가능성이 있을듯.)
+
+1. 캡슐을 데이터구조와 메소드 캡슐로 각각 나누면서도 깨지지 않게 하는 방법.
+
+2. Dependency라는 단어의 뜻 의존, 종속을 그대로 번역하다보니 이해에 어려움이 있다.
+
+3. 데어터구조의 캡슐을 부품이라고 생각하고 이해하도록 하자.
+
+4. 은닉화된 부품에 접근하기 위해서는 게터세터 메소드가 필요하다.
+
+5. 합성엔 두 가지 방법이 있다.
+> 1) Composition Has a : 중간 콘솔 메소드 캡슐에서 구성이 완료되어있는 것, 또는 부품이 조립되어 있는 것.
+> 2) Association Has a : 부품을 끼어넣어야 되는 것.
 
 
 
