--- a/4주차.md
+++ b/4주차.md
@@ -67,9 +67,9 @@
 
 ## 2022-12-20
 
-# 1. 객체지향의 3요소 - 캡슐화, 상속, 다형성
+### 1. 객체지향의 3요소 - 캡슐화, 상속, 다형성
 
-# 2. 캡슐화에 대한 좀 더 정확한 이해
+### 2. 캡슐화에 대한 좀 더 정확한 이해
 
 1. 캡슐화의 보편적인 정의 : 데이터 구조와 메소드들을 모아두는 것.
 - 하지만 데이터 구조가 없다면? 아니면 데이터 구조만 존재한다면?
@@ -82,7 +82,7 @@
 - public : 공공연하게~
 - protected, default도 있지만 오늘은 여기까지만.
 
-# 3. 오버로드
+### 3. 오버로드
 
 1. 메소드끼리 같은 이름을 가지게 되면 오버로드라고 한다. (과적)
 
@@ -95,7 +95,7 @@
 5. 생성자 오버로드에서 기본 생성자에서 초기화해줄 때 본인 개체를 가르키기 위해서 this를 사용하게 되는데
 그 전에는 사용되어서는 안된다.
 
-# 4. 캡슐화를 유지하는 코드 재사용법, 객체 합성 (이 단어도 직역일 가능성이 있을듯.)
+### 4. 캡슐화를 유지하는 코드 재사용법, 객체 합성 (이 단어도 직역일 가능성이 있을듯.)
 
 1. 캡슐을 데이터구조와 메소드 캡슐로 각각 나누면서도 깨지지 않게 하는 방법.
 
