--- a/4주차.md
+++ b/4주차.md
@@ -109,5 +109,52 @@
 > 1) Composition Has a : 중간 콘솔 메소드 캡슐에서 구성이 완료되어있는 것, 또는 부품이 조립되어 있는 것.
 > 2) Association Has a : 부품을 끼어넣어야 되는 것.
 
+## 2022-12-21 (이날 배운건 더 정확한 정리와 이해가 필요)
+
+### 1. Has a 결합
+1) 기본적으로 Has a 관계는 클래스의 위아래가 있는 관계이다. 한 클래스가 상대 클래스의 부품 (종속)인 간계.
+2) Association, Composition, Aggregation 의 차이는 무엇일까.
+- Association : 뒤의 Compositon, Aggregation은 Association의 특별한 케이스 2가지인 경우.
+즉 가장 합집합.
+- Composition : 컴포지션의 특징은 나머지 클래스 부품들이 존재해야 그걸 가진 클래스가 온전해지는 경우.
+- Aggregation : 무조건적인 부품이 아니라 클래스들 서로가 서로의 부품이 되는 경우.
 
 
+### 2. DI (Dependency Injection)
+1. 어떻게 관계를 생성하느냐 (조립하느냐)
+
+2. Setter Injection
+- set메소드를 생성해서 조립하는 방법
+- A,B 클래스가 있다고 했을때 A.set(B); 같은 형식
+
+3. Construction Injection
+- 생성자를 통해서 조립하는 방법
+- A = new A(B); 같은 형식
+
+
+### 3. Is a 결합
+1. 흔히 말하는 상속.
+
+2. extands 를 사용해서 부모 자식 클래스 관계가 형성된다.
+
+3. 부모의 틀을 가져와서 자식 클래스에서 사용하는 것이라고 이해하자.
+
+4. 부모 클래스의 private 접근 제한을 갖는 필드 및 메소드는 자식이 물려받을 수 없다.
+
+5. set을 통해 접근할 수 있지만, 은닉성이 사라지는 문제가 생김 => super 사용.
+
+6. super 키워드 : 자식 클래스에서 부모 클래스를 가리킬 때 사용하는 키워드.
+
+7. 부모의 메소드를 자식의 메소드에서 가져다 재생성 하는 것 : 오버라이드.
+
+8. 오버로드 와는 다른 개념.
+
+
+### 4. 상속 시 참조형식과 호출되는 메소드의 관게
+1. newlacExam 클래스가 Exam 클래스에 상속되어 있을 때.
+
+2. Exam exam = new NewlacExam(); 형식으로 생성 가능함.
+
+3. 자식이 부모 메소드를 오버라이딩 했을 경우에 자식 메소드가 먼저 호출된다.
+
+4. 부모 메소드를 사용할 때에도 자식 오버라이딩된 메소드를 먼저 호출한다.
