--- a/4주차.md
+++ b/4주차.md
@@ -118,6 +118,12 @@
 즉 가장 합집합.
 - Composition : 컴포지션의 특징은 나머지 클래스 부품들이 존재해야 그걸 가진 클래스가 온전해지는 경우.
 - Aggregation : 무조건적인 부품이 아니라 클래스들 서로가 서로의 부품이 되는 경우.
+- 위에는 검색해서 알아본 결과.
+
+3) 수업&질문 토대로 정해본 정의
+Association : 한 클래스가 부품으로 들어가 있는 상태.
+Composition : 부품을 가진 클래스가 객체 생성시에 바로 해당 부품을 이용하는 것.
+Aggregation : 부품을 가진 클래스가 자신이 원할 때 해당 부품을 이용하는 것.
 
 
 ### 2. DI (Dependency Injection)
@@ -135,7 +141,7 @@
 ### 3. Is a 결합
 1. 흔히 말하는 상속.
 
-2. extands 를 사용해서 부모 자식 클래스 관계가 형성된다.
+2. extends 를 사용해서 부모 자식 클래스 관계가 형성된다. (확장)
 
 3. 부모의 틀을 가져와서 자식 클래스에서 사용하는 것이라고 이해하자.
 
@@ -145,9 +151,9 @@
 
 6. super 키워드 : 자식 클래스에서 부모 클래스를 가리킬 때 사용하는 키워드.
 
-7. 부모의 메소드를 자식의 메소드에서 가져다 재생성 하는 것 : 오버라이드.
+7. 부모의 메소드를 자식클래스에서 같은 이름으로 가져다 재생성 하는 것 : 오버라이드.
 
-8. 오버로드 와는 다른 개념.
+8. 오버로드 와는 다른 개념. (오버라이드 : 타다, 덮어씌우다. 오버로드 : 쌓는다, 과적)
 
 
 ### 4. 상속 시 참조형식과 호출되는 메소드의 관게
@@ -155,6 +161,6 @@
 
 2. Exam exam = new NewlacExam(); 형식으로 생성 가능함.
 
-3. 자식이 부모 메소드를 오버라이딩 했을 경우에 자식 메소드가 먼저 호출된다.
+3. 자식이 부모 메소드를 오버라이딩 했을 경우에 같은 이름의 메소드를 호출할 때 자식 메소드가 먼저 호출된다.
 
-4. 부모 메소드를 사용할 때에도 자식 오버라이딩된 메소드를 먼저 호출한다.
+
