--- a/5주차.md
+++ b/5주차.md
@@ -8,9 +8,9 @@
 2. 톰캣을 실행시키면 WEB.xml 파일을 읽어 서블릿 객체를 생성한 후 서블릿 컨테이너에 보관한다.(메모리에 올린다는 뜻.)
 3. 그 후에 해당 객체를 클라이언트에서 요청이 오면 응답하거나 요청이 오지 않을 경우, 서버 관리자가 정할수도 있는 시기마다 메모리를 비운다.
 
-4. 컴파일 => 배포 => 톰캣 실행 => 브라우저 => 주소입력 (?)
-- 배포 : 루트폴더에 클래스파일을 저장.
-- (좀 더 알아보아야 함.)
+4. 컴파일 => 배포 => 톰캣 실행 => 브라우저 실행 => 주소입력
+- 배포 : 루트폴더에 클래스파일을 저장. / 톰캣 폴더로 이동.
+- 더 추가되는 과정이 있지만 현재는 이렇게 알고 있자.
 
 
 ### 2. 서블릿을 여러 종류로 실행.
