--- a/5주차.md
+++ b/5주차.md
@@ -84,3 +84,14 @@ response.setContentType("text/html; charset=UTF-8");
 ```
 PrinterWriter out = response.getWriter();
 ```
+
+## 2022-12-27
+### 1. Object
+1. 모든 객체를 하나로 묶어줄 존재가 필요했다.
+2. 자바는 모든 것이 객체인데, 하나로 묶을 수 있는 존재 => Object
+3. 자료형이 어떠하든 object형이면 다 담을 수 있다.
+```
+Object d = 3; // 원래는 오류나지만 아래처럼 오토박싱을 해준다.
+Object d = new Integer(3);
+```
+4. 
