--- a/6주차.md
+++ b/6주차.md
@@ -71,3 +71,25 @@ https://wooooooak.github.io/javascript/2018/12/08/call,apply,bind/
 9. 이벤트 버블링
 - 캔버스와 윈도우에 온클릭 이벤트를 해주었을때 캔버스를 누를때도 윈도우 이벤트가 같이 실행된다.
 - 이벤트는 부모로 버블링된다.
+
+## 2023-01-03
+
+### 1. 마지막 ES5
+
+1. JS파일을 나눠서 사용하려면 HTML에 다 써준 다음 순서도 고려해서 불러와야 한다.
+
+2. 객체지향을 흉내내기 위해서 수많은 this의 지뢰 속에서 싸우고 있음.
+
+3. 콜백함수의 의미 : 다른 함수의 인자로써 넘겨진 후에 특정 이벤트에 의해 호출되는 함수.
+
+### 2. Canvas
+
+1. 불러낸 캐릭터를 움직일 때 잔상을 없애기 위해서는 전에 있던 잔상을 지워주는 업데이트 행위를 계속 해주어야 한다.
+
+### 3. ES6
+
+1. 마참내, class 지원.
+
+2. let, const 지원! 중괄호 벗어나면 변수 소멸! 지역화 가능!
+
+3. 내일부터 ES6에 물들어가자!
