--- a/6주차.md
+++ b/6주차.md
@@ -93,3 +93,73 @@ https://wooooooak.github.io/javascript/2018/12/08/call,apply,bind/
 2. let, const 지원! 중괄호 벗어나면 변수 소멸! 지역화 가능!
 
 3. 내일부터 ES6에 물들어가자!
+
+## 2023-01-04
+
+### 1. ES6 속으로
+
+1. 2진수 8진수 표현 가능!
+
+2. 위에서 말한대로 변수에 대한 문제점 해결!
+
+3. Template String
+- + 기호로 문자들을 이어주는 대신 백틱기호(``) 와 ${} 을 통해서 더욱 직관적이고 쉽게 쓸 수 있다.
+
+```JavaScript
+let name = "이재준";
+let nickname = "동동이";
+let a  = `${name}은 ${nickname}을 닮았다.`;
+```
+=> 콘솔로그하면 이재준은 동동이을 닮았다. 가 나온다.
+
+4. Computed Property
+- 객체 프로퍼티를 외부 변수명을 넣어 주어서 할당할 수 있다.
+```JavaScript
+let className = "korea";
+
+let obj = {
+    [className] : '대한민국';
+}
+```
+위처럼 넣을 수 있다.
+- 왜, 어떻게 등등은 추후에 Java에서 Interface 의 필요성과 같이 더불어 배울 예정.
+
+5. Destructuring (한국말로는 구조 분해 할당 이라고 하나보다.)
+- 한 객체에 담겨 있는 정보들을 한번에 선언해줄 때 유용함.
+
+```JavaScript
+let obj = {kor:30, eng:20, math:30};
+
+let {kor, eng, math} = obj;
+// 이렇게 선언하면 let kor=30; let eng = 20; ... 이 한번에!
+```
+- 다른 변수명으로도 선언 가능!
+
+
+```JavaScript
+let obj = {kor:30, eng:20, math:30};
+
+let {eng:english} = obj;
+// 이렇게 선언하면 english 변수명에 obj의 eng값이 초기화됨!
+```
+
+- obj 객체안에 없는 값을 하면 그 변수명으로 선언은 되지만 초기화는 안됨.
+
+- 객체 안에 객체가 담겨 있어도 방법이 있음.
+
+```JavaScript
+let obj = {kor:30, eng:20, math:30,
+    student:{name:'name', numb:'010-0000'}
+};
+
+let {student:{name,numb}} = obj;
+// 이렇게 선언하면 student 객체 안에 담긴 name, numb도 다 선언가능!
+```
+
+### 2. 언어 공부도 좋지만 게임도 만들어보자.
+
+1. ES6문법으로 다시 써보면서 함수들을 다 class 화 해주었는데
+오늘 가장 느낀 점은 자바스크립트는 오류를 잡아주는 센스나 자비 또한 없으므로 작성할 때 덤벙되지말고 문법맞춰서 잘 쓰자.
+
+2. window.setTimeout 안에 run() 을 계속 실행시키면서 그안에 좌표값들을 설정해서 내가 찍은 포인터 쪽으로 그림을 캔버스에 계속 찍어내면서 움직이게 보이는 화면을 만들어봄. 이 과정속에서 Time 설정과 함수들의 흐름을 다시 한번 보아야 할 듯.
+
