--- a/6주차.md
+++ b/6주차.md
@@ -163,3 +163,72 @@ let {student:{name,numb}} = obj;
 
 2. window.setTimeout 안에 run() 을 계속 실행시키면서 그안에 좌표값들을 설정해서 내가 찍은 포인터 쪽으로 그림을 캔버스에 계속 찍어내면서 움직이게 보이는 화면을 만들어봄. 이 과정속에서 Time 설정과 함수들의 흐름을 다시 한번 보아야 할 듯.
 
+## 2023-01-05
+### 1. Array Destructuring
+1. 
+```JavaScript
+let kors = [1,2,3];
+let [kor1, kor2, kor3] = kors;
+console.log(kor1);
+
+let kors2 = [4,5,6];
+[kor1, kor2, kor3] = kors2; // 같은 변수에 다른 값 넣고싶을때
+console.log(kor1);
+// 객체에 담겨 있던 정보들을 한번에 할당해준 것처럼 배열에 있는 값도 해줄 수 있음.
+```
+2. 더 재밌고 기발한 응용방법, 값 바꾸기를 쉽게 해줄 수 있다.
+
+```JavaScript
+let a,b;
+a = 20;
+b = 30;
+[a,b] = [b,a]; // 배열 디스트럭쳐링으로 쉽게 두개의 값을 바꿔줄 수 있다.
+console.log(a);
+```
+
+3. 배열의 원하는 인덱스에 있는 값을 뽑아서 변수에 넣어줄수도 있음.
+
+```JavaScript
+[,,kor3] = kors2;
+console.log(kor3);
+```
+
+4. 원하는 값을 뽑고 나머지 값들을 배열로 뽑아줄 수도 있음. (단, 나머지가 아니면 오류발생함.)
+
+```JavaScript
+let nums = [1,2,3,4,5,6,7,8,9,10];
+let [n1,n2,...rest] = nums; //나머지연산자
+console.log(rest);
+```
+
+### 2. 컬렉션 (데이터 수집 하는 방법들)
+1. Set : 배열 값들의 중복을 없애줄 때 쓰는 컬렉션
+- 값이 곧 키.
+
+```JavaScript
+let a = new Set([2,2,3,3,5,4,8,7,9]);
+// 위의 배열에서 중복된 값들을 제거하고 a에 초기화됨.
+```
+
+- has() : 해당 값을 가지고 있는지
+- delete() : 해당 값 지우기
+- clear() : 전체 삭제
+
+- WeakSet 도 존재하는데 기능이 굉장히 제한적으로, 중복이 제거되었는지 확인용으로 많이 씀.
+
+2. Map : Key:Value 값으로 저장해주는 컬렉션
+- 데이터를 임시로 묶어서 사용해야 할 때 주로 사용됨.
+
+- entries(), keys(), values() 메소드들을 통해서 전체나 키, 값만 각각 뽑아낼 수 있다.
+
+- entries()를 해주면 배열 값으로 나오는데 이를 배열 디스트럭쳐링과 조합하면?
+```JavaScript
+for(let [k,v] of notice.entries())
+    console.log(`key : ${k} , value : ${v}`);
+//이런식으로 뽑아내줄수 있다.
+```
+
+- 값과 키를 뽑아내는 방법을 유동적으로 사용할 줄 알아야함.
+
+### 3. 검색해봐야할 점.
+1. Iterator, for in, for of, forEach에 대해서 좀 더 알아보기
