--- a/7주차.md
+++ b/7주차.md
@@ -61,3 +61,18 @@ import aaa,{test,test1} from ...
 // bbb란 이름으로 test 함수 불러오는 상황
 import test as bbb from ...
 ```
+
+## 2023-01-10
+### 1. 게임 수업
+
+1. 맵에 전투기가 내려오게 하고 일정 구간 후에는 자동으로 삭제될 수 있도록.
+
+2. enemy 클래스를 캔버스 클래스에 불러와서 배열을 사용해서 계속 소환했다가 사라질 수 있게.
+
+3. 이 과정에서 콜백함수에 대해서 자세히 공부함.
+
+4. 적 개체가 스스로 작동해서 사라지면 좋지만, 역참조를 하게 되어 불순환이 될수 있어서 함수를 캔버스에서 설정하고 콜 하는 조건은 적 클래스에서 만들어 줌.
+
+5. 캔버스 생성자 변수로 만들때 애로우 펑션으로 하게 되면 좋지 않다.
+
+6. 애로우 함수의 장단점을 더 검색해봐야함.
