--- a/학원배운거정리/서블릿 다시 공부.md
+++ b/학원배운거정리/서블릿 다시 공부.md
@@ -37,3 +37,66 @@
 - 1. 클라이언트에서 요청을하면
 - 2. 웹서버와 WAS에서 URL과 매핑된 Servlet 코드를 찾아서 실행.
 - 사용자에게 제공되는 서블릿 이름을 제공해서 맵핑될 수 있도록 (직접적으로 연결되는 것이 아니라)
+
+- java 파일 컴파일 / classes 폴더에 class 파일저장 배포 / 톰캣실행 / 브라우저 실행 / 주소 입력
+
+6. 이클립스를 이용한 서블릿 프로그래밍
+
+- 컴파일에서 배포, 실행에 이르는 모든 과정을 ctrl + F11로 가능.
+- 프로젝트파일 환경 / web project Settings/ Context 를 / 로 바꿔줘야 프로젝트 명 노출이 안됨.
+
+7. 어노테이션을 이용한 URL 매핑
+
+- 서블릿 3.0 넘어오면서 어노테이션 으로 맵핑 가능
+- 대신 web.xml파일에서 metadata-complete 값을 false로 바꿔줘야한다.
+- true값이면 서블릿 맵핑 정보를 다 찾아보게됨.
+- 혼자만드는것이 아니라 여럿이서 만들게 되기 때문에 어노테이션이 좋음(단순 코드량이 적은것이 아니라)
+
+8. 서블릿 출력 형식을 지정해야 하는 이유
+
+- 지정해주지 않으면 브라우저마다 다르게 해석함.
+- 예시) println <br> 태그
+
+9.  한글과 콘텐츠 형식 출력하기
+
+```java
+//보낼때 UTF-8로 설정
+		response.setCharacterEncoding("UTF-8");
+		//브라우저에서 html로 읽고 UTF-8로 읽어라 하고 헤더에 넣어줌.
+		response.setContentType("text/html;charset=UTF-8");
+```
+
+10. get요청과 쿼리 스트링
+
+- http://loclahost/hello?cnt=3 =>get요청
+- 뒤에 cnt=3이라는 인자값을 받아서 실행시킬 수 있음.
+
+11. 기본값 사용하기
+
+- cnt 값이 전달받지 않더라도 허용되도록
+
+```java
+// url에 cnt 값이 없어도 돌아갈수있게
+		String temp = request.getParameter("cnt");
+		int cnt = 2;
+		if(temp != null && !temp.equals(""))
+			cnt = Integer.parseInt(temp);
+```
+
+12. 입력받은 값만큼 돌아가게 하고 싶으면?
+
+```html
+<section>
+  <form action="hi">
+    <div>
+      <label>"안녕하세요" 몇번원해~?</label>
+    </div>
+    <div>
+      <input type="text" name="cnt" />
+      <input type="submit" value="출력" />
+    </div>
+  </form>
+</section>
+```
+
+- 위와같은 html 코드로 나온 화면에서 값을 입력하면 localhost:8080/hi(form action)?cnt(input name)=입력값 url로 나오면서 횟수만큼 나옴.
