--- a/학원배운거정리/10주차/2023-01-30.md
+++ b/학원배운거정리/10주차/2023-01-30.md
@@ -25,8 +25,8 @@
 
 6.
 
-- JPA
-- ORM (DB Entity로 쿼리)
+- ORM (DB Entity로 쿼리) : 객체 관계형 데이터베이스를 매핑하는 것
+- JPA : ORM 기술의 표준 API
 - DB에 대한 관점이 바뀌고 있다.
 
 7. SQL의 구분
