--- a/학원배운거정리/10주차/2023-01-31.md
+++ b/학원배운거정리/10주차/2023-01-31.md
@@ -54,6 +54,7 @@
 - DBMS 마다 다른 종류를 쓰는 것도 싫고 하다.
 - Connection Statement ResultSet 이 틀만 있으면 됨.
 - JDBC와 JDBC DRIVER
+
 - 1. 드라이버 로드하기 (DRIVER MANAGER)
 - 2. 연결 생성하기
 - 3. 문장 실행하기
@@ -87,6 +88,13 @@
 - 수정은 닫혀있고, 확장은 열려있고
 
 7. 스태틱 생성자
+
+- static 고정!
+- 메모리
+- stack으로 올라가다보니 어디서든 사용 가능
+- 공통적으로 사용해야 할 값이 있을 때 사용하면 좋다.
+
+- 객체를 만들지 않더라도 사용하고 싶은 정보를 실행하고 싶을 때 치트키처럼
 
 8. Seed PDB를 이용한 pluggable 데이터베이스 생성
 
