--- a/학원배운거정리/13주차.md
+++ b/학원배운거정리/13주차.md
@@ -152,3 +152,78 @@ method.invoke(controller, 3, 4);
   > 자바프로그램이라 생각해도 됨.<br>
   > 디펜던시 스타터 라는 이름으로 <br>
   > 자동 컨피규어
+
+## 02.23
+
+1. public, static 폴더 홈 디렉토리 역할. webapp 도 같이
+
+2. view단을 jsp 로 쓴다면 webapp
+
+3. 과거에 리소스 파일을 public으로 뒀었지만 조용히 static으로 변경되었는데 과거 호환성도 있어야 하기 때문에 public, static, webapp이 다 홈 디렉토리가 된다.
+
+4. static : css,img 기타 등등
+5. webapp : jsp 파일, 사용자가 업로드한 파일을 두는 곳.
+6. templates : thymeleaf 파일
+7. public은 원래 안쓰는 것. 퍼블리싱을 위한 작업폴더가 필요하니 이 폴더를 사용하겠다.
+
+8. 순서가 있기에 충돌이 나지 않음.
+   static > public > webapps
+
+9. 프론트 컨트롤러에 완전히 서블릿을 밀어내서 완전한 포조컨트롤러들을 만들어보자.
+
+10. 함수명과 상관없이 어노테이션 해놓으면 실행된다.
+
+11. url에 클래스가 아니라 함수가 연결되어 있음. <br>
+
+12. 함수명은 url명과 맞춰서, class명은 폴더명처럼
+
+13. @RestController 안써두면 스프링이 안읽음.
+
+14. 스프링이 객체화 해주면서 변수명이 겹치게 되면 오류가 발생한다.
+
+15.
+
+```java
+// 이걸 안써두면 스프링이 안읽음.
+@RestController
+// 반복되는 상위 주소들은 이렇게 맵핑 주소 적어서 축약시킬 수 있다.
+@RequestMapping("/menu")
+```
+
+16. 서버 코드 바뀌면 재시작해주는 프로그램.
+    플젝 선택 => spring => stater
+
+- dev tools 해주면 바뀌면 재시작해줌.
+
+17. jsp 뷰단이 사용자로 부터 요청이 직접적으로 들어가면 안된다.
+    <br>
+    전에 했던 것처럼 WEB-INF폴더 만들어서 넣어두기.
+
+18. 처리할 수 없는 jsp 는 다운로드 시키게 한다.
+
+19. 스프링에서 서서히 jsp 지원이 빠지게 되면서 template 쪽에서도 jsp 제스퍼 기능이 없어지니까 메이븐에서 디펜더시로 추가해주자.
+
+20. Rest : 웹에서 데이터를 전송하고 처리하는 방법을 정의하는 인터페이스
+
+21. @RestController : 사용자에게 데이터만 전송
+
+22. 그냥 @Controller는 view를 찾는 역할
+
+23. State Transfer
+
+24. REST 가 생겨난 이유 : 발달함에 따라 서버의 부담이 심해지고 (데이타를 소비하는 계층이 많아짐.)
+
+25. REST 원칙 중..
+
+- 서버 클라이언트 둘로 나누어서 한 쪽은 공급, 한 쪽은 소비만 하도록 구분해야한다.
+- 서버는 데이터 제공만. (중요)
+- 상태가 유지가 될 필요없이 사용될 수 있어야 한다. 등등
+
+- 레스트 풀의 형태를 제공하고 있다.
+
+26. SSR (서바 사이드 렌더링) : 서버에서 뷰단에서 데이터까지 다 렌더링 해서 클라이언트로 보내주는 거.
+
+27. 다음 시간은 스프링의 프론트와 DI기능 모델을 만들어서 뷰에서 활용하기.
+- 출력을 다뤘으니 더 추가적인 방법
+- 입력받는 방법
+- DI
