--- a/학원배운거정리/13주차.md
+++ b/학원배운거정리/13주차.md
@@ -224,6 +224,53 @@ method.invoke(controller, 3, 4);
 26. SSR (서바 사이드 렌더링) : 서버에서 뷰단에서 데이터까지 다 렌더링 해서 클라이언트로 보내주는 거.
 
 27. 다음 시간은 스프링의 프론트와 DI기능 모델을 만들어서 뷰에서 활용하기.
+
 - 출력을 다뤘으니 더 추가적인 방법
 - 입력받는 방법
 - DI
+
+## 02.24
+
+1. 스프링에서의 모델
+
+2. 프론트 컨트롤러에서 뷰로 전달할 때 모델(데이터들)도 전달해야 하는데 컨트롤러에서 담아서 주자니 포조 유지를 못함.
+   => 방법이 없을까?
+
+3. 컨트롤러 쪽에서 파라미터에 모델을 담아 프론트쪽에서의 모델을 같이 사용하게 된다. (프론트쪽에서 invoke를 통해서 컨트롤러의 파라미터를 읽게되는데 거기에 모델을 적어두면 결국 프론트와 같은 모델을 공유하게 됨.<br>
+   => output parameter
+
+4. 그냥 컨트롤러에 리퀘스트요청을 하면안되나? => 그러면 프론트컨트롤러를 두고 서블릿을 몰아둔 이유가 없음.
+
+5. 그래서 스프링에서 model 개체를 만들어 줌.
+
+6. 프론트가 또 해야할 역할 - 입력
+
+7. 서블릿에서는 입력받는 값을 모두 문자열 형태로 받음.
+   그래서 파라미터에 문자열로 숫자를 받으면 값이 없어도
+
+8. @RequestParam
+
+- 값을 필수로 받을 상황이 아니라면 required 속성을 false로 해주자. (기본이 true, 그러면 무조건 건너받는 값이 있어야함.)
+
+9. 400에러는 파라미터 에러
+
+10. 파일 업로드의 post 요청
+
+11. URL의 인코딩, 디코딩 중요함.
+
+12. 업로드 입력
+
+- select box
+- drag&drop
+- clipboard (ctrl+c,v)
+
+- 공통점 : 사용자에 의해서 선택됨.
+
+- 브라우저는 허락된 영역인 샌드박스만 만질 수 있음.
+
+13. @controller 상에서 필요한 뷰 없이 바로 응답하고 싶을때
+    => @ResponseBody
+
+14. 바이너리 파일 : MultipartFile
+
+15. url 인코딩으로 바껴서 가는데
