--- a/학원배운거정리/14주차.md
+++ b/학원배운거정리/14주차.md
@@ -109,3 +109,42 @@
 - AnnotationConfig
 
 16. IOC 외부 XML을 통한 조립 복습.
+
+## 03.02
+
+1. xml 을 통한 단점.
+
+- 보따리에 담아야 할 녀석을 다른 곳에 등록을 해야함.
+- 별도의 파일에 가서 등록을 해달라고 말을 해야함.
+- 다 수정해야 함.
+
+2. 어노테이션으로 설정할 때의 장점.
+
+- 어노테이션 : 처리기(파서,번역기 코드를 처리하는 곳 등등)가 코드에 심어놓는 데이타
+
+- xml을 사용하면 맵핑되는 정보를 적어주고, xml파일의 위치까지 알려주어야 하는데 어노테이션은 간단한 입력만으로도 처리기가 처리해준 결과는 똑같음.
+
+-@Retention : 소스상에서만, class, 런타임 상
+
+3. String 추가 연산이 반복될 때 StringBuilder를 사용하면 오버헤드를 줄일 수 있다.
+
+- String 추가를 해줄 때 더해질 앞의 문자열을 처음부터 끝까지 읽어드리는데, 계속 추가될 수록 길어지기 때문에 빌더를 사용하는 것이 좋다.
+
+4. 스프링에서 제공하는 객체 생성 어노테이션
+
+- 보통 @Component랑 다를 바 없다.
+- @Controller 는 url 정보를 수반하기 때문에 좀 다름.
+- @Service, @Repository는 HTML의 시맨틱태그마냥 존재에 대한 구별.
+- @Configuration은
+- @Bean은 남이 만든 것.
+
+5. @Autowired ???
+
+6. Spring
+
+- Spring MVC(프론트 컨트롤러), Spring DI
+- Spring Transaction, Spring Script
+
+7. MyBatis
+
+8. application.properties -> yml 파일
