--- a/학원배운거정리/15주차.md
+++ b/학원배운거정리/15주차.md
@@ -78,3 +78,77 @@ mybatis:
 8. yml 공백 하나하나 다 약속임. ㅈ..지울예쩡..?
 
 - plus1. 리플렉션, 어노테이션
+
+## 03-07
+
+1. mybatis는 오버로드 지원 안함.
+
+2. @Mapper 를 했지만 마이바티스가 가지고 있는 컨테이너가 따로 있어서 예전에는 스프링 컨테이너와 같이 쓸 수 없었다.
+
+3. 아쉬운 쪽인 마이바티스가 커넥션을 만들었다.
+
+4. 오버로드를 구현하려면 오버로드로 넣는 값에 기본 값을 넣어서 원래 메소드를 구현하도록..
+
+5. 페이저를 제대로 지원하려면 어떡해야 할까?
+
+6. offset : 어디에서 부터
+
+7. null 인지 확인할 수 있는 자료형으로 => Integer
+
+- 앞으로 db를 다루다보면 null인지 아닌지 확인해야 하는 경우가 많아지므로 int형 보다는 Integer 형을 고려해야한다는 점을 주기적으로 생각해야 한다.
+
+8. 오라클을 쓸 지는 모르겠지만 ROWNUM을 아주 비효율적으로 얻음.
+
+9. mysql 같은 것에서는 offset를 이용해서 효율적으로 얻을 수 있음.
+
+10. 구절의 맨 마지막에. Limit, Offset
+
+```sql
+select *
+from menu
+order by regDate desc
+-- limit : 한 페이지에 나올 양, offset : 시작 위치.
+limit 10 offset 0;
+```
+
+11. null 처리를 java로 지저분하게 했는데 mybatis가 지원해준다.
+
+12. 처음 테이블 => 업데이트 시 필요한 컬럼 하나씩 추가 => 거대화 => 새로 리팩토링 => 무한 순환...
+
+13. 자주 사용하는 매개변수를 위로, 아닌 것은 아래로 정리.
+
+14. trim : SQL 문을 적을 때 조건문에서 앞 뒤 문장들이 적용이 되지 않아서 이어주는 and나 or 또는 ,(쉼표) 등이 남아있게 되면 자동으로 지워준다. (WHERE 나 SET 까지도)
+
+- prefixOverrides : 실행될 쿼리의 <trim> 문 안에 쿼리 가장 **앞**에 해당하는 문자들이 있으면 자동으로 지워준다.
+
+- suffixOverrides : 실행될 쿼리의 <trim> 문 안에 쿼리 가장 **뒤**에 해당하는 문자들이 있으면 자동으로 지워준다.
+
+```sql
+-- prefix 뒤의 절이 없으면 where 사라지고, And 나 or 이 바로 와버려도 제거해줌
+<trim prefix="WHERE" prefixOverrides="AND |OR ">
+			<if test="query != null">
+				name like '%${query}%'
+			</if>
+			<if test="query != null">
+				and price > #{price}
+			</if>
+			<if test="query != null">
+				and categoryId = #{categoryId}
+			</if>
+</trim>
+```
+
+15. 로깅
+
+16. update를 할 때 골때린데, null 로 한 행만 업데이트하려다가 다 null 이 되는걸 방지하려면 죄다 if문 처리를 하게되는데 이걸? 또 해결해줌.
+
+17. <set>
+
+18. JUnit
+
+- 간단하게 테스트 해볼 수 있다.
+- http://mybatis.org/spring-boot-starter/mybatis-spring-boot-test-autoconfigure/
+
+0.  resultType, parameterType in XML
+
+## 03-08
