--- a/학원배운거정리/15주차.md
+++ b/학원배운거정리/15주차.md
@@ -152,3 +152,59 @@ limit 10 offset 0;
 0.  resultType, parameterType in XML
 
 ## 03-08
+
+1. 통합 테스트 : 모든 걸 다 구현하고 테스트 해보는 것.
+
+- 비효율적.
+
+2. 파라미터 타입을 안써주면
+   써줄 거면 하나만.
+
+3. 로그를 꼼꼼히 출력해보자.
+
+4. mybatis는 컬렉션으로 전달해주는 기능도 있다.
+
+5. foreach
+
+6. 컬럼 별칭 맵핑하기
+
+- mybatis의 ResultMap 이용하기
+
+7.
+
+- 오라클은 모든 칼럼 대문자
+- MS-SQL은 대소문자 구별
+- mysql : 대소문자 구분 안됨.
+
+8. mybatis - Dynamic SQL
+
+- if, trim, foreach
+
+9. @Mapper 를 인터페이스에서 치워야 할 때가 가끔 있다.
+
+- 온전한 인터페이스로 두고 싶을 때
+- 오버로드 하고 싶을 때.
+
+10. 맨 땅 자바로 할 때는?
+
+11. mybatis가 구현한 친구들이 있는 보따리 이름 : sqlSessionFactory
+
+12. 저 팩토리와 맵핑되어서 스프링이 사용할 수 있도록 모아둔 콩자루 이름 : Mapper 컨테이너 (이 설명은 부정확함.)
+
+- 11번, 12번 : Mapper 컨테이너, sqlSessionFactory와의 관계
+
+13. IoC Container의 실제 자료형은 ApplicationContext
+
+14. sqlSession만 꺼내서 연결해서 쓰는 방법이 있음.
+
+15. 세션 : 기간.
+    클라이언트가 필요로하는데 그 필요로 하는 기간이라는 개념이 생기면 클라이언트가 곧 클라이언트 세션이라는 말로 표현될 수 있다.
+
+16.
+
+- 맵퍼 객체를 사용하는 방법
+- 팩토리에서 직접 꺼내쓰는 방법
+
+17. 필요한 세션동안 팩토리에서 생성해서 멥퍼 컨테이너에 담아둠.
+
+18. 오버로드 해서 사용하는 방법.
