--- a/학원배운거정리/15주차.md
+++ b/학원배운거정리/15주차.md
@@ -208,3 +208,58 @@ limit 10 offset 0;
 17. 필요한 세션동안 팩토리에서 생성해서 멥퍼 컨테이너에 담아둠.
 
 18. 오버로드 해서 사용하는 방법.
+
+## 03.09
+
+1. 단일 테스트
+
+2. Constructor Injection
+
+- 반복되는 repository.getMapper를 줄이기 위해서 생성자에 담아주기
+
+3. 기업단에서는 트랜잭션은 서비스에서 다룸. (Dao에서 안다룸.)
+
+4. 기업에서 가장 쓰고싶은 스프링의 기능은 트랜잭션 처리.
+
+- AOP 방법론??
+- 몰라도 라이브러리 쓰는 방법만 알면 상관 없지만 그래도 끕끕하니까 알아두자.
+
+5. 관계가 있는 건 조인, 아닌건 서브 쿼리
+
+6. 데이터 모델링
+
+- 시작하려면 일단 DB가 잇어야 겟다~
+- 정하자
+  데이터베이스명
+  계정명
+
+7. 정리해서 질문
+
+8. 데이터베이스 모델링
+
+   1. 데이터베이스 구현 프로세스
+      - 개념 설계
+      - 논리 설계
+
+9. 업무는 행위를 담고 있다.
+
+10. '누구' 가 '무엇' 을 '무엇' 했다.
+
+11. 주체와 행위 = Entity 와 Relation
+    (회원 카드 발급 자동차 주문)
+
+12. ERD => 격자형 테이블 : 논리설계
+
+13. 역할자 별로 할 일이 다르다.
+
+14. DB에 저장하게 될 때 업무가 된다.
+
+- 단순 누적, 수정이나 변경이 필요없는 데이터 => 요즘은 빅데이터라 불림.
+- 이런 것에 특수한 DB : 비정규화(비정형화) 데이터베이스 => No-Sql 데이터베이스
+- 빅데이터들은 그냥 폴더에 둘 거임.
+
+15. 하둡 - 병렬되어 정리되어 있는 컴터들의 묶음.
+
+16. 대상과 대상과의 관계 => 포함 관계
+
+17. 꼬리가 있는 쪽이 부모. (부모가 알맹이가 더 작음.)
