--- a/학원배운거정리/15주차.md
+++ b/학원배운거정리/15주차.md
@@ -263,3 +263,62 @@ limit 10 offset 0;
 16. 대상과 대상과의 관계 => 포함 관계
 
 17. 꼬리가 있는 쪽이 부모. (부모가 알맹이가 더 작음.)
+
+## 03.10
+
+1. ER 다이어그램에서 가장 중요한 포인트
+
+- 결국 이 내역들이 DB에 담게 되느냐. 쌓일 필요가 있는가. 그거로 인한 기능이 있는가.
+
+- 행위 => 기록여부, 대상
+
+- 개념 설계는 테이블 고려 X.
+
+- 업무에 대한 행위가 다 데이터.
+
+- 업무의 주체와 대상을 잘 구분해야 할 뿐.
+
+- 4형식의 문장에서 목적어들은 서로의 구성이 생긴다.
+
+- 행위를 할 때 저장하고 싶은 내역.
+
+- 등록되는 데이터를 찾는 것. 그 등록이 행위.
+
+- 부모 종속 화살표에서 삼각형은 큰 삼각형 (간단한 화살표 표시 X)
+
+- 역할이 완전히 나눠져 있다면 상속 관계 X
+
+2. 물리 설계
+
+- 제네레이트 기능 (자료형 등등)
+- 간편하게 가능
+
+3. 개념 => 논리 설계
+
+- 사각형 -> 테이블
+- 1 : n => n 쪽으로
+- 상속 관계 어떻게 ?
+- 0 to many
+- 1 to 1 (오른쪽이 0일 수 없음.)
+- 1 to many
+
+- n : n 관계에서는 릴레이션이 별도의 테이블로 만들어짐. => 액션테이블
+
+- 액션 테이블은 양쪽의 선을 끌어안고 있음.
+- 참조키를 엮으면 식별이 가능할 수 있다.
+- 추천 테이블만의 아이디를 가지고 외래키를 끌어안느냐, 슈퍼키(복합키) 형태로 식별을 하게 만들것인가.
+
+- 추천 테이블만의 아이디의 장점
+
+  - 깔끔하다.
+  - 키가 자꾸 늘어나면 감당이 안됨.
+
+- 양쪽의 키를 엮으면?
+
+  - 키가 안늘어남.
+  - 비교할 때 계속 키의 수만큼 비교해야 함.
+
+- 식별자를 쓸 수 있다면 => 식별관계
+
+- 예약
+  1번 회원 1번 상품 예약, 또 예약 가능.
