--- a/학원배운거정리/16주차.md
+++ b/학원배운거정리/16주차.md
@@ -88,3 +88,70 @@
 - 같은 자원들 두고 동시에 접근하고 있을 때 고립이 필요.
 
 14. 내일 정규화, 고립도 공부
+
+## 03.14
+
+1. erd 피드백
+
+- 개념 설계 부분에서는 확실히 머리 속에서 여태 알던 DB, 테이블 이딴 거 지워버리고<br>
+  대상이 무엇을 한다 라는 행위에 집중해야 한다.
+- 설정을 수정하는 것보다 애초에 등록이 되어야 개념 설계에서 릴레이션이 생길 수 있고 이미 디폴트 값이 존재하여 있다면 뻗어나가는 것이 아니라 회원 쪽으로 빠져야 한다.
+- 커뮤니티 관련을 디벨롭해서 사람들이 계속 서비스를 이용해야 할 매력을 발전시켜야 한다.
+
+2. 정규화
+
+- 보통은 4 정규화 까지. 그 이상은 오바다.
+- 중복된 데이터를 가질 수 있는 구조를 중복을 최소화하게 구조화
+- 정규화 사이 끼리의 순서는 정해져 있지 않다.
+
+3. 제 1 정규화
+
+- 교과서 : 모든 도메인이 원자값으로 이루어져야 한다.
+- 하나의 컬럼에는 같은 값이 들어가면 안된다.
+
+- 도메인 - (유효한 범위)값 -> 컬럼.변수.도메인.
+- 순수하게 값이 같아서 하나로 정리하는 게 아니라 가지고 있는 특성이나 의미가 중복이 되냐를 생각.
+
+- 중복을 제거한다.
+- 하나의 속성이 하나의 값을 갖도록 한다.
+
+- 최대 몇 번인지 정해져 있지 않다면 잘라내야 한다.
+
+- 데이터베이스 관리 -> 데이터 관리.
+
+4. 제 3 정규화
+
+- 기본 키에 이행적 함수 종속이 되지 않는 것.
+- 중간에 걸쳐서 종속이 되는 관계를 끊어내는 것.
+
+- 1 정규화와 비슷.
+- 쪼개져서 부모가 나옴.
+
+- one more thing
+  - 참조해야 하는 테이블이 없을 때 ->
+  - 딱히 함수가 없지만, 중복이 발생 되어 따로 부모를 뽑아내는 경우도 3정규화에서.
+
+5. 제 2 정규화
+
+- 부분 함수 종속성을 없앤다.
+- 포린키가 함수. 함수는 (여러 수식을 한 단어나 개념으로 정리)
+- 외래키로 참조 할 수 있는 데이터는 없어야 한다.
+
+6. 제 4 정규화
+
+- 다대다 찢어놓기.
+
+7. 데이터와 키의 중복은 다름.
+
+- 데이터가 중복되면 다 바꿔야 함.
+- 키는 내용만 바꾸면 됨.
+
+8. 제약 조건
+
+- 값의 조건에 대한 장치들.
+
+9. 이후에
+
+- 트랜잭션의 고립화, 전파.
+- 사용자 인증과 권한. -> 스프링 Security
+- 구글, 네이버 등등 소셜 로그인.
