--- a/학원배운거정리/16주차.md
+++ b/학원배운거정리/16주차.md
@@ -155,3 +155,141 @@
 - 트랜잭션의 고립화, 전파.
 - 사용자 인증과 권한. -> 스프링 Security
 - 구글, 네이버 등등 소셜 로그인.
+
+## 03.15
+
+1. 정규화
+
+- 경험이 있는 경우에는 순서를 따지지 않고 이미 구분이 되어 진다.
+
+2. 제약 조건 (마지막 단추)
+
+- 도메인 > 엔티티 > 릴레이션
+
+3. mysql date 문법 차이
+
+- TimeStamp : 타임존에 따라 값이 따라서 바뀌지만 시간 범위가 정해져있다. ( 1970~2038)
+- DateTime : 타임존에 따라 바뀌진 않지만 시간 범위가 넓다. (0000~9999)
+- 컬럼에 들어갈 값들을 생각해야 한다.
+
+4. 도메인 제약 조건
+
+- 칼럼에 들어갈 값에 대한 제약 조건
+- 속성에 도메인이 아닌 값이 올 수 없도록 하는 제약조건
+
+- NOT NULL (NN)
+
+  - 필수조건
+  - 무조건 값이 있어야 한다. NULL이여서는 안된다.
+
+- DEFAULT
+
+  - 기본적으로 들어갈 값들
+
+- CHECK
+
+  - 조건을 걸어주는 제약조건
+  - 제약조건에 이름을 부여할 수 있다. (ex CONSTRAINT CHK_Person)
+
+  ```sql
+    ALTER TABLE menu
+    ADD CHECK (1<=level and level<=3)
+  ```
+
+- 1씩 자동으로 늘어나는 인덱스 옵션 주기 (AI : AUTO INDEX)
+
+5. forward engineer
+
+- 테이블 다이어그램들을
+
+6. 똑같은 레코드가 반복되어서는 안된다 => PK 제약조건
+
+7. 키의 종류
+
+- 기본키
+
+  - 실제 사용자의 정보로 기본키를 쓰게 된다면 추후에 탈퇴하고 다시 가입하려하면 기본키로 사용했었기 때문에 사용할 수 없다.
+  - 개인정보는 키로 사용할 수 없다.
+  - null이 될 수없고, 중복될 수 없음.
+
+- 후보키
+
+  - 식별자, 기본키가 될 수 있는 모든 컬럼.
+
+- 대체키
+
+  - 기본키를 제외한 후보키들. AK.
+
+- 대리키
+
+  - 별도의 식별을 위한 대리키를 사용한다.
+  - 아이디
+  - 번호
+  - 코드
+
+- 외래키
+- 수퍼키
+  - 두 개 이상의 키로 이루어지는 기본키, 복합키
+
+8. unique 제약조건
+
+- 기본키가 아니지만 중복이 허용이 되면 안되는 것들.
+- null값도 허용함.
+
+9. 엔티티 제약조건
+
+- 기본키 제약조건
+- 유니크 제약조건
+
+10. 릴레이션 제약조건
+
+11. reverse, forward 데이타 없이 해보쟈.
+
+12. 뷰엔진. jsp, thymeleaf
+
+13. 스프링 트랜잭션 처리 시에 고립화, 전파
+
+- 트랜잭션 동시성에 따른 문제점들
+
+  - Dirty read 가 뭘까?
+    - rollback되기전에 업데이트된 점을 읽어버리는..
+  - Non-repeatable read
+    - 읽어 오다가 중간에 삭제되어서 다신 읽을 수 없게 되는 상황.
+    - 동시성에 따라 어쩔 수 없이 생기는 문제점.
+  - phantom read
+    - 데이터가 읽고 건드린 테이블은 절대 어떠한 것도 할 수 없게
+
+- Read_committed 가 보통 default
+
+- read_uncommiteed
+
+  - dirty read 가능성 농후
+
+- repeatable_read
+
+  - 읽기 시작만 해도 다른 곳은 컷.
+
+- serializable
+
+- 고립화는 크게 건들일 일이 많이 없다.
+- 동기화에 대한 옵션.
+
+14. 트랜잭션 전파 옵션 (-dao)
+
+- 한 트랜잭션에서 빠져야 한다던지... 음.. (정리 다시 하기)
+
+- propagation
+- 고립보단 적용할 여지가 있음.
+
+- 업데이트를 여러 개를 동시에 해야하는 경우에.
+- Dao 에서의 동시에 일어날 일들을 구분해야 할 경우에.
+
+- 전파옵션은 자식.
+
+- mandatory : 호출자, 서비스가 트랜지션을 가지게 되는
+- nested (새로추가된놈) : 현재 서비스에서 가지고 온 트랜지션이 존재하면 네스트드 트랜잭션을 실행 required처럼 행동? (납득이 잘 안됨. 중첩되서 트랜잭션을 실행?)
+- supports : 서비스에서 트랜지션을 가지고 와서 지원을 하겠지만, 트랜지션이 없다면 참여 안함.
+- requires_new : 무조건 새로운 트랜지션을 마듬, 하지만 부모의 트랜지션에는 섞이지 않을 것.
+- required : 현재 트랜지션이 잇으면 지원, 없으면 만들어서 진행.
+- not-supported : 트랜지션 안할거임, 기다렷다가 다음 놈 실행해 (?)
+- never : 실행하라하면 화낼거임, 안함.
