--- a/학원배운거정리/16주차.md
+++ b/학원배운거정리/16주차.md
@@ -293,3 +293,134 @@
 - required : 현재 트랜지션이 잇으면 지원, 없으면 만들어서 진행.
 - not-supported : 트랜지션 안할거임, 기다렷다가 다음 놈 실행해 (?)
 - never : 실행하라하면 화낼거임, 안함.
+
+## 03.16
+
+1. 공통분모페이지 파일들의 폴더 -> inc,shared...
+
+2. Tiles Library
+
+- <jsp:>
+- jsp 모듈화를 태그를 통해 사용했었다.
+- include의 반복마저 불만을 가지게 됨.
+- 정말 안의 main만..
+
+- 은퇴..
+
+  - 더이상 안쓰거나
+  - 발전한 이유가 없어졌거나
+
+- xml 타일 지지서 파일 만들기
+
+- 리졸버가 뭔가요? (resolver)
+
+  - 명령어를 찾아 나서는 친구
+  - viewResolver : view를 찾아나서는 친구
+
+- 내 지시서 어딨어?~~?~?
+
+- jsp에서의 모듈화는 Tiles가 유일무이
+
+- Tiles 비롯 jsp 관련 서비스들이 스프링부트 3.0 이상부터는 지원이 종료되기 시작.
+
+- tiles.xml 에서 \* 과 {index} 를 이용한 맵핑과 configurer로 xml 연결을 해주고.. 했다는 것만 기억해두자.
+
+3. Thymeleaf (쩔수없이 강제로 ㅋㅋ)
+
+- html 뷰단 파일들은 이제 templates 폴더로.
+- 타임리프를 사용할때도 뷰리졸버 개념이 있다.
+
+- jsp 같은 경우는 자신만의 문법을 넣는데
+- 타임리프는 최대한 퍼블리셔가 작업한 파일들을 온전히 작업할 수 있다.
+
+- 타임리프를 사용하게 되면 재시작을 잘 안해줌. 그래서 코드수정 후 확인을 위해서는 클린, 서버재시작을 직접해주어야함.
+
+- www.thymeleaf.org/doc 참고
+
+- fragments 기능이 있는데 jsp의 include와 비슷해서.. 잘 안씀.
+
+  - 계속적인 반복되는 작업이 생기기 때문에
+
+- Thymeleaf Layout Dialect
+
+- public,static,templates
+
+  - public : 예전부터 쓰던 퍼블리싱과 관련된 파일들의 폴더 였지만 훗날 사라질 가능성 있음.
+  - static : 그래서 나온 css, js, img 파일들 (정적)을 위한 폴더
+  - templates : view 파일들을 위한 폴더 (html)
+
+- html 상단에 써줘야 타임리프 문법 적용 가능
+
+```html
+<html lang="en" xmlns:th="http://www.thymeleaf.org"></html>
+```
+
+- layout 적용을 위한 태그내용
+
+```html
+<html
+  xmlns:th="http://www.thymeleaf.org"
+  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+  layout:decorate="inc/layout"
+></html>
+```
+
+## 03.17
+
+1. 타임리프 레이아웃
+
+2. 경로
+
+- 필드경로
+  - 자신의 홈디렉토리의 경로를 뜻함.
+  - ~{inc/footer} 이렇게 표현 가능.
+
+3. 넣을 수 있는 방법
+
+- 인서트
+
+  - 해당영역을 감싸는 디브가 생성되어버림.
+
+- 리플레이스
+  - 그냥 단순하게 대체하고 싶다면 리플레이스
+
+4. Fragment specification Syntax
+
+- fragment expressions
+
+5. 바로 <th:insert> 이런식으로 쓰진 못함.
+
+- <div th:insert> 이런식으로 적어주어야 함.
+
+6. 타임리프 레이아웃 다이어렉의 속성들 -> dialect
+
+7. th:fragment="" 하면 다른 html 파일에서 해당 영역을 불러올 수 있다.
+
+- 사용하는 파일에서 ~{index::header} 로 불러오기.
+- index.html에서의 헤더를 list.html에서도
+
+```html
+<!-- index.html -->
+<header class="header ~~~" th:fragment="header"></header>
+```
+
+```html
+<!-- list.html -->
+<div th:insert="~{index::.header}"></div>
+```
+
+8. layout:decorate="inc/layout" 해두면 inc폴더의 layout파일로 전체적인 틀을 사용할 수 있다.
+
+9. layout:fragment=""
+
+10. a 태그 안에 링크들도 다 바꿔주어야 함. (뒤에 .html 딱지 떼어내주기)
+
+11. menucontroller 작업.
+
+12. MenuView Menu extens 해서 categoryName 멤버추가.
+
+13. 디비에 결함이 있다 하면 아우터가 필요하다.
+
+14. 서비스단 구현후에 테스트.
+
+15. 타임리프 공식문서 잘 훑어보는 방법 터득하면 다 할 수 있음.
