--- a/학원배운거정리/17주차.md
+++ b/학원배운거정리/17주차.md
@@ -31,3 +31,21 @@
 - {ㅁㅁㅁ}{aaa}(ㅁㅁㅁ=${menu.img},aaa=${menu.id}) 이런식으로 형식만 잘 알면 쉽게 써줄 수 있다.
 
 5. lombok 라이브러리 -> 게터세터투스트링생성자 만들어주는 라이브러리
+
+## 03.22 수요일
+
+1. detail 페이지 추천메뉴 작업.
+
+- 자기가 자신을 가리켜서 구성이 생기는 관계일 경우에 이름을 잘 지어서 구분할 수 있도록 해야한다.
+- 대리키를 사용할건지 확인해야한다.
+
+2. 목록으로 나오는 것을 가져오는 반복적인 작업에서는 뷰를 사용해야 한다.
+
+3. 개체 만들고, 멥퍼 & Dao 만들고, test 해보고, 토대로 서비스 만들고, 컨트롤러로 연결해서 모델 만들어주고, view(html)에서 타임리프로 수정 후에 작동까지.
+   무.한.반.복.
+
+4. 발표 4월 14일
+
+- 3월 마지막 주 : 관리자 페이지 만들면서 여태까지 한거 복습 겸
+- 4월 첫째 주 : 보안, 예외처리
+- 4월 둘째 주 : 순수 프로젝트 개발 기간.
