--- a/학원배운거정리/17주차.md
+++ b/학원배운거정리/17주차.md
@@ -49,3 +49,58 @@
 - 3월 마지막 주 : 관리자 페이지 만들면서 여태까지 한거 복습 겸
 - 4월 첫째 주 : 보안, 예외처리
 - 4월 둘째 주 : 순수 프로젝트 개발 기간.
+
+## 03.23 목요일
+
+1. 뷰를 너무 많이 만들어내면 안된다.
+
+- 화면 하나에 보여지는 데이터라고 해서 다 조인해서 뷰를 만들어서는 안된다.
+- 뷰는 목록에 대한 내용에 관해서만 만든다.
+
+2. 무조건 단위는 레코드 단위로 뽑아와야 한다.
+
+- 이름이나 작은 단위만 필요하더라도
+
+3. service 한테 다 달라하자.
+
+4. service는 다른 서비스를 사용해서는 안된다.
+
+5. 다만 한 service 에서 여러 repository를 사용할 수 있다.
+
+6. param이 무엇.?????
+
+7. th:classappend
+
+8. 쿼리스트링 값에 따른 페이지 변경을, 순수 html 타임리프로 계속 페이지 변경을 주면
+
+- 성능이 느리고, 코드량이 많다.
+- 사용성이 떨어진다.
+
+9. 자바스크립트를 이용하면
+
+- 깜빡임이 없다 (-> 새로고침할 이유가 없다.)
+
+10. api
+
+- 이전에는 /menu/list 이런식으로 (@Controller 사용시 -> 문서명)
+
+  - /menu/edit : GET
+  - /menu/edit : POST
+  - /menu/del?id=3 : DELETE
+
+- @RestController -> data
+
+  - /menus method:GET
+  - /menus/3 method:GET
+  - /menus/3 method:DELETE
+  - /menus/3 method:PUT
+
+- 웹(http)이 지원하는 방식은 다양한데 html이 지원하는 방식은 get/post 두가지 방식
+- 이전까지는 페이지, 지금부터는
+
+11. http의 메소드 개수는 그러면 몇 개나 될까?
+
+- 기본으로 많이쓰는 4가지 : get, put, delete, post
+- 나머지 친구들은 그렇게 많이 쓰지 않는다.
+
+12.
