--- a/학원배운거정리/17주차.md
+++ b/학원배운거정리/17주차.md
@@ -103,4 +103,73 @@
 - 기본으로 많이쓰는 4가지 : get, put, delete, post
 - 나머지 친구들은 그렇게 많이 쓰지 않는다.
 
-12.
+## 03.24 금요일
+
+1.
+
+- 서버페이지에서 새로 계속 만드는 방법
+- 첫페이지는 서버에서, 중간 변화는 JS로
+
+2. load 될때까지 기다리는 주제에 왜 스크립트 너가 먼저 다운되는것이냐
+
+- defer옵션을 주면 스크립트 부분을 맨 밑에 두는 것과 같은 효과를 준다.
+
+3. 자바 스크립트와 Ajax가 사용되기 전 HTML 기능만을 이요한 웹 환경이였을 때
+
+- 클라이언트에서 page 요청
+- 작은 정보 하나만 바뀌었음에도 불구하고 서버에서 새로운페이지를 다시 풀로 제작해서 클라이언트로 보내줬었다.
+
+4. 자바 스크립트와 Ajax를 이용하기 시작한 후의 웹 환경
+
+- Ajax : 비동기적으로 자바스크립트로 이용해서 XML을 요청한다.
+- 작은 정보가 바뀐다면 해당 data만 서버에 요청해서 받아온다.
+
+5. 람다식은 지역함수라는 개념이 사라지므로 잘 가려서 쓰자.
+
+6. fetch vs XHR
+
+- fetch
+
+  - promise
+
+- XHR
+  - ?
+
+7. 언어는 사람의 생각을 발현해주지 않으면 매력적이지 않다.
+
+- 입출력 등 팔다리를 달아주는 플랫폼
+- 자바스크립트 태생적으로 브라우저 안에서만
+- 스크립트가 사용할 수 있는 유효 범위 -> 샌드박스
+- 그래서 벗어나는 일을 해선 안되는 친구였다.
+
+- commoncomponent : 마소가 자료형을 정해주고, 함수호출방식을 정해주면 언어들은 그 스펙만 맞춰주면 컨컴포넌트로 만들어진 라이브러리를 사용할 수 있다. -> ActiveX
+- XMLHttpRequest 여담.
+
+- 브라우저에 담긴 XMLHttpRequest 사용.
+
+8. 동기형 요청
+
+- 문제점 : 한 행위가 다 돌아갈 때 까지 기다려야 하고, 심지어 너무 오래 지속되면 그대로 뻗는다.
+
+9. 자바스크립트는 비동기를 처리하기 위해서 콜백함수를 이용함.
+
+- 콜백함수로 구현하다보면 내부에서 또 콜백이 필요하게 됨.
+- 비동기 지만 동기형의 코드방식처럼 -> promise (ES6)
+
+10. 부모속성, parentElement, parentNode
+
+11. 노드 순회 방법
+
+- previousSibling
+
+12. Element 객체 -> Html 태그 객체
+
+13. 집에서 포스트맨 깔고.. .gitignore 설정 main 브랜치에도 해주고.. 잘.. 해보쟈..
+
+14. 이클립스 utf-8 설정하는 방법은 패키지 탐색기에서 찾을게 아니라 이클립스 preference 환경설정에서 바꿔주자.
+
+15. js 모달 창 구현에 있어서 어떤게 맞는건지, 할거면 어떻게 건들여야 하는지 주말동안 정리하자.
+
+- event, dom 트리, 관련해서 알아보쟈.
+
+16. 노션 정리도 하면서 복습 및 암기가 꼭 필요한 것 같다. 선생님 필기노트 참고하면서 차근차근 서블릿부터 MVC 직접구현, 프론트 컨트롤러, 스프링, 부트, JSP, 타임리프, html, css, js, dom 등등.. 정리 하나씩 차근차근
