--- a/학원배운거정리/18주차.md
+++ b/학원배운거정리/18주차.md
@@ -1,1 +1,21 @@
 # 18주차 (03.27~03.31)
+
+## 03.27
+
+1. 자바스크립트
+
+- 비동기 처리 방식 => Ajax
+
+2. api menucontroller 는 restcontroller 로 json 형식인 데이터 값을 보내주는 역할을 한다.
+
+3. Node 인터페이스의 기능을 이해하면 DOM 객체의 공통 기능을 이해할 수 잇다고 할 수 있다.
+
+4. Node 인터페이스
+
+- MDN 검색 후에 하단을 보면 인터페이스 부분에 해당하는 부분만 볼 수 있음.
+
+5. firstChild
+
+- node 간 순회에서의 firstChild 와 HTMLElement 사이에서의 firstElementChild는 비슷하면서도 이해를 정확히 해야 하는 특징을 지니고 있다.
+- 전자는 element 뿐만 아니라 빈칸 Text 까지도 자식으로 보고 있어 빈카돈도 firstChild가 될 수 있다.
+- 하지만 firstElementChild는 Element 사이 끼리에서 순회에서 찾는 기능이다.
