--- a/학원배운거정리/18주차.md
+++ b/학원배운거정리/18주차.md
@@ -18,4 +18,31 @@
 
 - node 간 순회에서의 firstChild 와 HTMLElement 사이에서의 firstElementChild는 비슷하면서도 이해를 정확히 해야 하는 특징을 지니고 있다.
 - 전자는 element 뿐만 아니라 빈칸 Text 까지도 자식으로 보고 있어 빈카돈도 firstChild가 될 수 있다.
-- 하지만 firstElementChild는 Element 사이 끼리에서 순회에서 찾는 기능이다.
+- 하
+
+## 03.28 화요일
+
+1. 서버로 데이터를 받아 선택한 카테고리의 내용들이 표시되게 만드는 방법 (비동기적으로 하기 위해 공부 중)
+
+- 카테고리에 따라 표현해야 하기 위해서는 일단 전체 메뉴로 표시되어있던 메뉴들을 모두 지워야 한다.
+- 다 지우는 방법이 여러 가지가 있다.
+  - 어제 했던 반복문을 통해서 다 지우는 방법도 있다.
+  - 이 방법을 쓰면 더 깔끔하게 지워진다.
+
+2. innerHTML
+
+```javascript
+menuList.innerHTML = ''
+```
+
+- 이런식으로 아예 빈 내용을 넣어버리면 끝!
+
+3. create는 document의 기능, insert는 element를 선택해서 넣는다.
+
+- 이전에는 새로운 element들을 넣기 위해서 innerHTML에 문자열을 가지각색으로 더하여 넣는 묘기를 부렸다.
+- 하지만 지금은 올바른 방법은 아닌 듯 하다.
+
+```js
+let menuSection = document.createElement('section')
+// 이런식으로 일일히 만들어주고 하면 만들 내용이 많다면 지옥이다.
+```
