--- a/학원배운거정리/18주차.md
+++ b/학원배운거정리/18주차.md
@@ -46,3 +46,34 @@ menuList.innerHTML = ''
 let menuSection = document.createElement('section')
 // 이런식으로 일일히 만들어주고 하면 만들 내용이 많다면 지옥이다.
 ```
+
+3. 앵귤러의 탄생
+
+4. 앵귤러의 몰락
+
+5. 신생 리액트, 뷰의 탄생
+
+6. 리액트의 단점
+
+7. 뷰를 동작하는 방법
+
+## 03.29 수요일
+
+1. 뷰를 동작하는 방법
+
+2. MVC
+
+- oneway : 모델이 뷰로 소진되면서 끝나는 것.
+- twoway
+
+3. vue
+
+- mount : 뷰 영역
+
+4. options Api
+
+- vue가 정해놓은
+
+5. v-bind, v-model
+
+6. promise(내일!), fetchAPI 동기식같은 비동기방식?!? 콜백함수가 없어진 비동기방식?
