--- a/학원배운거정리/18주차.md
+++ b/학원배운거정리/18주차.md
@@ -77,3 +77,49 @@ let menuSection = document.createElement('section')
 5. v-bind, v-model
 
 6. promise(내일!), fetchAPI 동기식같은 비동기방식?!? 콜백함수가 없어진 비동기방식?
+
+## 03.30 목요일
+
+1. Vue
+
+- Options
+- Composition
+- ...
+
+2. vue -> MVC 프레임워크
+
+3. React는 one way만 지원. jsx, 바벨스크립트,
+
+4. Vue의 2.0과 3.0의 버전 차이
+
+5. 디스트럭쳐링
+
+6. 브라우저가 기본적으로 제공하는 두 가지 XHR, Fetch
+
+7. 콜백함수 : validation function 위임함수 , 나중에 가 키워드
+
+8. fetch, promise
+
+- await : 사용할 때 조건이 있음 -> 뭘까요?
+
+- 원래는 비동기
+
+- 도착할 때까지 기다려줄 수 있는 신기한 친구
+
+- await 안써주면 promise 객체가 바로 반환되어 버리고 코드흐름이 그대로 진행됨.
+- 써주면? promise 객체가 resolve 즉, 우리가 받고 싶었던 내용을 반환받을 때까지 기다리고 받으면 ㄲ.
+
+- 난 동기로 안할건데? await 안쓸건데에~
+  - then()
+  -
+  ```js
+  let promise = fetch('/menus')
+  promise.then((response) => {
+    console.log('도착햇냐~')
+  })
+  ```
+- catch()
+
+9. fetch API - promise 반환 - await - async 상관 관계
+
+10. send() 비동기 함수 기능 보유.
