--- a/학원배운거정리/18주차.md
+++ b/학원배운거정리/18주차.md
@@ -123,3 +123,34 @@ let menuSection = document.createElement('section')
 9. fetch API - promise 반환 - await - async 상관 관계
 
 10. send() 비동기 함수 기능 보유.
+
+## 03.31 금요일
+
+1. 화면 내 데이터 변화가 있을 떄
+
+- 어떠한 변수와 연동
+- 어떠한 지시자를 쓸 것이냐
+
+2. vue랑 타임리프랑 같이 있으면 vue 리스트 갯수만큼 반복이 됨 ㄷㄷ
+
+- 서버에서도 클라에서도 페이지를 만들고 있음.
+- 누가 어떻게 어떤 순서로 페이지를 만들고 있는가.
+
+- 타임리프는 서버에서 만들어진 결과물로 이용하고 있는 친구.
+
+  - 타임리프가 이용하고 난 이후에 브라우저에서 코드를 보면 타임리프 관련 태그는 이미 정리된 후인 상태이다.
+
+- vue는 브라우저에 온 결과물을 이용함.
+
+3. vue options API - Lifecycle
+
+4. monut 의 의미
+
+5. strict mode
+
+6. 모든 함수는 this와 argument 소지
+
+7. 가려진 것을 다룰 때..
+
+- 자주 쓸 것 같으면 미리 심어 놓기
+- 자주 안 쓸것 같으면 쓸 때만 추가하도록. (이미 놓여져 있다는 것은 그만큼 메모리를 먹고 있다는 거니까)
