--- a/학원배운거정리/19주차.md
+++ b/학원배운거정리/19주차.md
@@ -42,3 +42,49 @@
 - 레이아웃
 - 조합형 페이지, 컴포넌트 안의 컴포넌트
 - 싸이월드의 배경음악이 쌉가능.
+
+## 04.04 화요일
+
+1. 바벨스크립트 : 변환기 상위 버전을 하위 버전으로 바꿔줄게요.
+
+2. sass : 예전 css 변수화 같은 변환기
+
+4. 프레임워크를 쓰지말고 플랫폼을 최대한 쓰자..
+
+- 프로그램을 다 꼬아버림.
+- dom : 바닐라JS
+- mvc : angularJs, vue, react, svelte.
+
+3. webpack : 도구들 다 쓰세여. 번역은 내가 함.
+
+- 개발할때 다시 할 때마다, 번들을 계속해서 느림.. -> vite 등장.
+- 배포본을 만드는 번들 시스템.
+- 최신 js를, 정확히는 모듈 기능이 없었을 때 대신 다 긁어모아서 모듈 시스템처럼 사용하게 해줬던 친구.
+
+- 개발 서버가 필요하다. -> 웹팩은 따로 개발 서버를 두었는데 vite 아 내가 다 가지고있슴~.
+
+4. 쓸만한 페이지만 번들링 해주는 친구 : vite가 등장.
+
+5. 변환기 쓰면 single file component 쓸 수 있음.
+
+6. 원래 한 파일에 두고 쓸 수 있던 것 아니였나?
+- 컴포넌트 별로 나눠서 가져갈때도 고립화를 가지고 갈 수 있다.
+- 다 패키징해서 번들해주는 친구가 vite (vue에선)
+
+7. 계산기 모듈화.
+
+8. <script> type 중에 importmap 이 있따.
+
+9. vue라는 친구는 이미 importmap을 설정한 상태.
+
+10. 노드js에다가 사용할 변환기를 얹어서 라이브러리
+- 변환기가 없을때 라이브러리로만 
+
+11. cdn이 뭐지?
+- 제이쿼리 : 79%
+- cdnjs 에서 받으면 통일도 되고 빠름.
+- vue 도 cdn에서받는다
+
+12. <script> 와 <script setup>
+
+ 
