--- a/학원배운거정리/19주차.md
+++ b/학원배운거정리/19주차.md
@@ -49,7 +49,7 @@
 
 2. sass : 예전 css 변수화 같은 변환기
 
-4. 프레임워크를 쓰지말고 플랫폼을 최대한 쓰자..
+3. 프레임워크를 쓰지말고 플랫폼을 최대한 쓰자..
 
 - 프로그램을 다 꼬아버림.
 - dom : 바닐라JS
@@ -68,6 +68,7 @@
 5. 변환기 쓰면 single file component 쓸 수 있음.
 
 6. 원래 한 파일에 두고 쓸 수 있던 것 아니였나?
+
 - 컴포넌트 별로 나눠서 가져갈때도 고립화를 가지고 갈 수 있다.
 - 다 패키징해서 번들해주는 친구가 vite (vue에선)
 
@@ -75,16 +76,51 @@
 
 8. <script> type 중에 importmap 이 있따.
 
+
 9. vue라는 친구는 이미 importmap을 설정한 상태.
 
 10. 노드js에다가 사용할 변환기를 얹어서 라이브러리
-- 변환기가 없을때 라이브러리로만 
+
+- 변환기가 없을때 라이브러리로만
 
 11. cdn이 뭐지?
+
 - 제이쿼리 : 79%
 - cdnjs 에서 받으면 통일도 되고 빠름.
 - vue 도 cdn에서받는다
 
 12. <script> 와 <script setup>
 
- 
+## 04.05 수요일
+
+0. git 에서 vue 프로젝 받을때
+
+- 해당 폴더로 경로 설정 후에 npm i 해서 모듈들 설치해줘야함.
+
+1. 변환기가 사용될 수 있는 환경 - node
+
+- 번들링, 패키징 -> 현재 vite 사용 중
+- vue 2.0 시절에는 webpack 사용했었음.
+- vite 가 dev 서버까지 내포해서 버벅임도 많이 줄었다.
+- 확장자를 js대신 vue로
+- vue 파일을 통한 장점
+- composition 형태로 api들을 사용할 수 있다.
+
+2. url에 따라서 원하는 컴포넌트를 바꿀 수 있어야 한다.
+
+- page 전환 : 라우팅 또는 네비게이션
+- vue Router : vue 에서 공식적으로 지원하는 라우팅 라이브러리.
+- npm 말고도 yarn이 추가로 나왔는데 속도가 더 났다는 말이 있지만 npm이 아직 많다.
+- maven과 gradle 같은 관계
+
+3. router-view
+
+4. 웹페이지는 보통 노출이 되기 위해서 만드는데 vue 라우팅을 통한 웹페이지는 소스가 굉장히 단순하게 나오는데 웹크롤링 같은 봇을 통한 친구들은 소스를 읽어서 노출을 시키기 되는데 이럴때 손해를 보게 되므로 웹 어플리케이션을 만드는데 좀 특화되어 있다고 볼 수 있다.
+
+5. vue-router 를 통한 링크 태그를 <a> 대신 사용해야 할 것 같다.
+
+6. createApp이 컨트롤러를 생성하고 모델을 반환하는 방법을 제시해준다.
+
+7. MVC 패턴을 이해하고, model 기반으로 vue를 사용해서 만들고, 배포할 수 있느냐에 중점을 두고 공부하자.
+
+- vue를 어떻게 만들었는지 까지는 투 머치.
