--- a/학원배운거정리/19주차.md
+++ b/학원배운거정리/19주차.md
@@ -124,3 +124,64 @@
 7. MVC 패턴을 이해하고, model 기반으로 vue를 사용해서 만들고, 배포할 수 있느냐에 중점을 두고 공부하자.
 
 - vue를 어떻게 만들었는지 까지는 투 머치.
+
+## 04.06 목요일
+
+1. 첫 번째 페이지에서 css 파일을 다 로드해야 하는가?
+
+- 충돌 등등 여러 우려 되는 점이 있으니까 필요한 페이지에서만 로드를 할 수 있겠끔
+
+- 어떻게? 각 vue 파일에 <style> 태그를 넣고 그 안에서 각각의 페이지 스타일 속성 지정 또는 url import 가능.
+
+- 스타일은 <head> 태그 안에 </head>
+
+2. 고립화란 다른 컴포넌트에는 영향이 미치면 안된다.
+
+- 컴포넌트가 포함된 컴포넌트, 라우터 뷰를 통해 끼어 들어가는 자식.
+- 포함하고 있는 컴포넌트가 포함된 컴포넌트에게 영향을 줄 수 있다.
+
+3. css 파일이 원 파일이 좋긴 하지만, 나눔으로써 가지는 협업의 가치가 있음.
+
+- css 번들링
+
+  - 장점 :
+
+- 화이트스페이스 (빈 공백)
+
+4. vue에서 style 고립화를 하지 않고 바꾸면 첨에 클라이언트가 파일을 다 받을 때 다 적용시킴으로써 각각의 컴포넌트에 구별해서 적용하려 했던 css가 모든 컴포넌트에 다 적용된다. -> 그렇지 않게 하려면? <style scoped></style>
+
+5. css 압축 유틸 사이트
+
+6. <style scoped></style>
+
+- 너무 많아지면 계속 나머지 스타일들이 반복해서 들어가기 때문에 좋은 방법은 아니다.
+- css 집중화를 최대한 잘 해야한다.
+
+7. CORS ERROR
+
+- origin : 서버를 의미.
+- 웹 서버에 문서를 요청 (SP, Data)
+- page, data를 요청하는 서버가 보통 같다. -> origin이 같다.
+- 근데 다르면? -> cross-origin
+
+- https://spring.io/guides/gs/rest-service-cors/
+- https://evan-moon.github.io/2020/05/21/about-cors/
+
+- class 마다 해주는 방법.
+- 컨트롤러마다 해주는 방법.
+- 통짜로 해주는 방법.
+
+8. es6 : 모듈 간의 고립화
+
+- export
+
+  - default
+
+- import
+
+  - as
+
+- importmap : 가져와야 하는 주소가 길거나 하는 문제가 있을 때 별칭을 정해줄 수 있는 맵.
+
+- Dynamic module loading
+  - 해당 조건이 만족할 때만 import 할 수 있도록 만들 수 있다.
