--- a/학원배운거정리/19주차.md
+++ b/학원배운거정리/19주차.md
@@ -185,3 +185,115 @@
 
 - Dynamic module loading
   - 해당 조건이 만족할 때만 import 할 수 있도록 만들 수 있다.
+
+## 04.07 금요일
+
+1. List.vue 파일에서 fetch 부분
+
+- .then으로 이어지는데 받는 reposnse 이런 것들의 의미.
+
+```vue
+<script>
+export default {
+  data() {
+    return {
+      list: [{}, {}, {}, {}],
+    }
+  },
+  mounted() {
+    fetch('http://localhost:8080/menus')
+      .then((response) => response.json())
+      .then((list) => (this.list = list))
+
+    // .then 을 하게 되면 위에서 받아온 것을 이어서 계속 받게된다.
+    // .then(response => {return response.json();})
+    // .then(function(list){
+    //   this.list = list;
+    //   this.list.push(list[0]);
+    // })
+  },
+}
+</script>
+```
+
+2. model, dto, vo, domain
+
+- 우리가 쓰고 있는 entity에 대해서...
+
+- 위의 제목에 나열된 4가지와 entity는 비슷한 의미도 있고 다른 의미도 있다.
+
+- 값을 담는다는 것에 대해서 시선이 다르다.
+
+- vo : 제일 하수, 구분하기 싫다는 사람들인데 쓰지 말자.
+
+- model : 가장 entity랑 비슷함. 근데 좀 다르면 model로 따로 패키징.
+
+- entity : db에서 정규화를 하고 나면 업무적으로 정규화된 항목. 테이블 단위가 entity. (동일한 비례.)
+
+- dto : 원격? Stock? 스텁?과 Proxy(가짜 서버)사이..?
+  - 로컬인지 원격인지 숨기는 함수 덩어리를 만들어서 소켓인지를 감추고..
+  - 줄세우기 데이터 - 시리얼라이제이션 (지금도 사용 중)
+  - 컨트롤러가 클라이언트로 보낼 때, 반환할 때 dto
+  - 근데 dto랑 entity랑 딱히 다르지 않음.
+  - 그렇다면 필요한가? 필요한 부분이 분명히 있음.
+  - 변환, 포장을 해서 보낸다면 dto라는 패키지를 만들어서 보내면 된다.
+
+3. 요청하는 페이지를 자세히 적는 것이 일반적이였으나, 요즘은 방법이 다양해졌다.
+
+- 요즘 트렌드는 따로 표시하지 않는 듯하다.
+- 경로를 값으로 얻는 방법
+- 쿼리로 얻는 방법
+
+4. 쿼리값으로 얻는 방법
+
+5. :to, :src
+
+- v-bind 참고!!!!
+
+6. 랜더링의 순서에 따라서 null 이였던 data값이 적용에 오류가 날수 있다.
+
+- 패치에서 메뉴에 값을 넣어주기 전에, 마운트 이전에 menu가 null 일 당시에 로딩이 되면 오류가 발생한다.
+
+- mounted 의미 : 화면에 보여졌다
+- created : 컴포넌트 생성, 데이터를 가져오기 전.
+
+- Uncaught (in promise) TypeError: Cannot read properties of null (reading 'name')
+
+7. vue lifecycle
+
+- created()
+- 화면에 데이터가 떠있어야 사용할 수 있는게 많다.
+
+- vue의 생명주기에 대해 더 알아봐야한다.
+
+8.
+
+- document.body.onload
+- document.onload
+-
+
+9. 디테일페이지의 문제는, 보통 load의 시기에 대한 타이밍에서 발생한다.
+
+10. reactive :
+
+11. 생명주기에 따른 reactive 에 대해서 생각해볼 필요가 있다.
+
+12. v-show
+
+- if는 처리, 그냥 빼버림
+- show는 참이지 않으면 숨김. 보이지만 않음.
+
+13. 2차 vue + dom + jpa 하면서 js 복습도 하고
+
+14. 컴포넌트를 뺄 때 원래 양쪽간의 컴포넌트 사이의 고립화를 신경써야 한다.
+
+- 컴포넌트 간의 데이터 전달을 위한 중요한 도구 3가지
+  - 속성
+  - 메서드
+  - 이벤트
+
+15. 컴포넌트 간의 상호작용
+
+- 지금까지는 단순 잘라내기밖에 안했음
+- 페치가 너무 많아지면 동기가 힘듦.
+- 원격의 모델 - dto라고도 불리고, 뷰에 바인딩할 데이터니 모델이고 애매모호
