20230411 공부 올리기

--- a/학원배운거정리/20주차.md
+++ b/학원배운거정리/20주차.md
@@ -18,3 +18,48 @@
 - 레퍼런스를 보고 공부를 해야하고, ai를 도구로써 잘 이용해야한다.
 
 - 탈퇴해도 사용자 이름 식별자를 남기기 위해서, id를 따로 남겨둔다.
+
+## 04.11 화요일
+
+1. get 요청만이 페이지를 반환하고 post 요청은 페이지를 반환하면 안됨.
+
+2. 리눅스에
+
+- 가상??????
+- 뉴렉처는 가상에서 돌아가고 있음.
+- 하이퍼V
+- 미니 컴퓨터
+- 에저
+
+3. 로그인 중이라는 상태값을 어디에 저장해둘까.
+
+- 쿠키 or 세션.
+- 일반적으로 세션이 기본.
+
+- 세션에 정말 많은 정보들이 담기게 된다면 서버 과부하가 생기므로 db에서 계속해서 꺼내올지
+  아니면 서버를 키울지 고민해야 한다.
+
+4. 원래는 returnURL을 매 관리자 페이지마다 다 썼어야 했는데 미친 짓이다... -> 스프링 필터
+
+5. 필터
+
+- 클라이언트와 서블릿 사이에서 request와 response 도
+- 원래 서블릿 기능
+
+- filter chain
+
+6. 스프링 필터
+
+- 스프링 3(약 2017~18) 까지는 xml 로 그 이후는 java로
+- xml 많
+
+- role 과 authoroty 의 차이.
+  - authoroty 에서는 ROLE\_ 를 꼭 붙여줘야 하는 것이 있었나보다. 그래서 버전 업하면서 나누면서
+    role 에선 자동으로 붙여주나보다.
+
+7. 빌더 시스템이 자바에서도 다른데서도 많이 보이기 시작함. functional program이 등장.
+
+- Stream APi
+- interface
+- functional program
+- jpa
