--- a/학원배운거정리/20주차.md
+++ b/학원배운거정리/20주차.md
@@ -63,3 +63,63 @@
 - interface
 - functional program
 - jpa
+
+## 04월 12일 수요일
+
+1. url에 매칭되는 녀서이 있으면 인증을 요구하게 될 거다.
+
+2. 예외
+
+- 입력 예외
+- 스프링이 오류에 대한 예외도 처리해준다.
+
+3. 도메인 컨트롤러 ( 윈도우 액티브 서버) 를 사용하는 경우도 있다.
+
+- 같은 도메인 안에서
+
+4. 사용자 데이터 서비스
+
+   1. 인메모리 서비스
+   2. JDBC 서비스
+   3. LDAP 서비스 (윈도우 서비스 액티브 디렉토리)
+
+5. 요즘 build()를 굉장히 많이 쓴다.
+
+- ```java
+  Member member = Member.builder().id(1L).userName("newlec").build();
+  ```
+
+6. builder가 setter는 아니다.
+
+- 생성자의 argument
+- @AllArgsConstrucotr 해야 builder 가능.
+- 생성자 오버로드로
+
+7. 짐을 뽑아내는, 식별키만 뽑아내도록 하는 암호화
+
+- 회원의 정보를 저장하면 법에 걸림.
+
+8. password("(nope)")
+
+9. 사용자의 개인정보가 어떤 것인지는 상관없이 몰라도 되고, 암호화 인코딩된 정보가 똑같으면 맞다고 판단.
+
+10. 403 에러!!!!! 잘 알아두기 뜨는 이유
+
+- CORS 공격을 피할 수 있는 설정이 되어 있느냐
+- 히든 컬럼으로 식별자를 심어둠 문서 요청할 때
+- csrf(cross site requset.. )
+
+- login filter를 사용하면서 우리가 만든 로그인이 쓸모가 없어져버렸다...
+- 내가 원하는 url
+
+11. 단순하게 user정보를 등록할 때 role만 등록하는 것 만으로도 간단하게 구별이 가능하다.
+
+12. 별개로 filter 부분에서 알아봐야 할 키워드
+
+- filter
+- filterChain / chain
+- passwordEncoder
+  - BcryptPasswordEncoder
+- UserDetailService
+- loginPage / loginProcessingUrl
+- 인메모리 서비스(new InMemoryUserDetailsManager), JDBC 서비스, LDAP 서비스
