--- a/학원배운거정리/20주차.md
+++ b/학원배운거정리/20주차.md
@@ -123,3 +123,64 @@
 - UserDetailService
 - loginPage / loginProcessingUrl
 - 인메모리 서비스(new InMemoryUserDetailsManager), JDBC 서비스, LDAP 서비스
+
+## 04.13 목요일
+
+1. jdbc 서비스
+
+- 이제 db에서 회원정보를 불러와서 인증절차를 밟아보자.
+
+- dataSource로 받아옴.
+
+- 칼럼명이 다르다고 뭘 바꾸고 할 필요 없음. 없으면 없는대로.
+
+- username, password, enabled 이 값들이 필요한데 테이블 칼럼명이랑 다르다고 테이블을 바꿀 필요는 없다.
+- 도구 주제에!!
+- 그냥 별명으로 처리해서 불러오면 끄읕.
+
+-
+
+```sql
+select username, 'ROLE_MEMBER' authority from member where username=?
+```
+
+2. spring security get userdetails
+
+- Authentication
+
+```java
+@PostMapping("reg")
+	public String reg(
+			String title,
+			Authentication authentication,
+			Principal principal) {
+		//방법4
+		System.out.println(principal.getName());
+
+		//방벙3
+		UserDetails user = (UserDetails) authentication.getPrincipal();
+		System.out.println(user.getUsername());
+
+		// 방법2
+		String userName = authentication.getName();
+//		authentication.getPrincipal();
+		System.out.println(userName);
+
+		//	방법 1
+//		Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+//		String currentPrincipalName = authentication.getName();
+//		System.out.println(currentPrincipalName);
+
+		// 등록하고
+		System.out.println("메뉴 등록 완료");
+		return "redirect:list";
+	}
+```
+
+3. 세션을 직접 이용하는 방법도 올바른 방법은 아니다.
+
+- UserDetails 이라는 이정보를 커스텀 할 수 있다.
+- 원하는 속성을 확장하는, 나만의 유저디테일
+
+4. sec:authorize : 비교
+   sec:authentication : 정보 뽑아오기
