--- a/학원배운거정리/21주차.md
+++ b/학원배운거정리/21주차.md
@@ -164,3 +164,47 @@ print(...ar)
 - 동명이 없는 하나의 이름을 만드는 것.
 - 인터페이스를 쓸 수 없다보니 만들어짐.
 - [Symbol.iterator]
+
+## 04.19 수요일
+
+1. Symbol
+
+2. Generator
+
+- \*
+
+3. 여러 국가의 언어에 따라서 문자열의 길이가 항상 제각각으로 나오는 문제가 있다.
+
+- 브라우저가 제공하는 캐릭터 코드에 영향을 받는다.
+- 그러다보니 들쭉날쭉한 현상이 발생.
+
+4. RegExp (정규 표현 식)
+
+- 처음에는 db에서 가져온 데이터를 화면에 뿌리기만 하면 됨.
+- 슬슬 남의 것을 긁어와야 함. 크롤링.
+- 자바에서 크롤링할 때 정규식을 사용할 수 있는가?!? 있다!
+- 백에서 긁어오는 것이 좋다. 프론트에서 긁어오면 CORS부터 시작해서 귀찮은 일들로 문제가 발생한다.
+- 데이타는 백에서 긁어오고 이때 정규식을 사용한다.
+- 관리자들은 사용자들이 어떤 것을 활용하는 지 궁금하다...!!
+
+```js
+// new 객체로 선언해도 되고
+let exp = new RegExp('010-[][][][]-[][][][]')
+// new로 안해도 되고
+let exp2 = /\d[0-9]-\d-\d{3,4}/
+```
+
+5. module, 모듈
+
+- importmap
+
+6. promise
+
+- 서비스 함수가 인자로 직접 콜백을 받지않고, 콜백을 받는 도구를 따로 두자.
+- 콜백을 직접 받지 않음으로써 중첩을 줄이자.
+- await 를 통해서 동기식으로도 가능.
+
+7. Ajax
+
+- XHR
+- Fetch
