20230421 공부 : JS dom, animation

--- a/학원배운거정리/21주차.md
+++ b/학원배운거정리/21주차.md
@@ -208,3 +208,11 @@ let exp2 = /\d[0-9]-\d-\d{3,4}/
 
 - XHR
 - Fetch
+
+## 04월 21일 금요일 - JS DOM
+
+1. 내가 생각한 이벤트 대상과 실제 이벤트 대상이 같은지 알고 진행해야 한다.
+
+2. 다른 요소에 영향을 주지 않고 애니메이션을 만들려면 transform
+
+3. animationEvent
