20230426 공부 : Vue Composition API

--- a/학원배운거정리/22주차.md
+++ b/학원배운거정리/22주차.md
@@ -15,4 +15,48 @@
 
 - spring인가 ws인가 was인가
 - 여기저기서 냄.
+
+## 04.26 수요일
+
+1. Vue의 Options API와 Composition API는 배타적인 관계
+
+2. 2.0버전대에서는 Options API를 사용하다가 3.0대에 들어서면서 Composition API가 도입.
+
+3. 컴포지션 API의 장점
+
+- 옵션Api의 많은 중첩구조대신 널부러뜨려서 쓸수있도록..
+
 -
+
+```vue
+<script setup></script>
+```
+
+4. .vue 와 .js의 차이
+
+- .vue : 변환기를 통해 js를 만든다는 의미
+- 장점은? singlefile에 template, style, 등등을 하나에 모아두면 변환기로 알아서
+- 공식문서 API Single-File Component 참고
+
+5. 근데 굳이 옵션이랑 컴포지션이랑 같이 쓰겟다는 사람들을 위해..
+
+- setup() 이라는 것을 만들어두었다..
+
+6. react 하다 == two way binding
+
+- reactivity
+
+7. 컴포지션에선 어떻게 리액티비티 하게?
+
+- ref() 이용
+
+- ref( ... ) : ...에 객체를 바로 두는 게 정답일까?
+- reactive() : 객체를 리액티비티 하게 해주는 것.
+
+8. 옵션 API 보다 편리하게 쓴다고 컴포지션을 쓰고 있지만 이 또한 잘 정리해서 작성해야 한다.
+
+9. 람다 식 : 수식을 쉽게 전달하기 위한 형식! 쓰임을 기억하고 사용하기
+
+10. 근데 사실 db정보 불러와서 속성끼리 reactive 해야 고쳐진다는 사실은 반만이해함.
+
+11. virtual dom 을 우리가 render 를 통해 만질 일은 없어야 한다.
