20230427 공부 : Vue - filter

--- a/학원배운거정리/22주차.md
+++ b/학원배운거정리/22주차.md
@@ -60,3 +60,15 @@
 10. 근데 사실 db정보 불러와서 속성끼리 reactive 해야 고쳐진다는 사실은 반만이해함.
 
 11. virtual dom 을 우리가 render 를 통해 만질 일은 없어야 한다.
+
+## 04.27 목요일
+
+1. watch와 Array.filter 를 활용한 검색 보기 기능.
+
+2. shallowRef 와 trrigerRef
+
+3. effectScope()
+
+- reactive 구간 설정?
+
+4.
