20230428 공부 : vue modal 구현

--- a/학원배운거정리/22주차.md
+++ b/학원배운거정리/22주차.md
@@ -71,4 +71,24 @@
 
 - reactive 구간 설정?
 
-4.
+## 04.28 금요일
+
+1. minfied 된 버전은 배포 버전. (화이트스페이스 등이 줄어든 채로 한줄로 쭈욱 이어져서 변환되어 배포되면서 용량이 많이 줄어듬.) - assets
+
+2. 배포버전, 개발버전에 따른 위치가 다름.
+
+3. <style scoped></style> 를 사용하게 됐을 때, 컴포넌트가 계속 교환될 때 이전의 style 적용이 해제된다고 생각하는게, 그런게 아니라 다음 컴포넌트에도 영향을 끼치며 남아있게 된다.
+
+   기능은 유용한 편이지만, 충돌을 막기 위해서라면 최대한 배제하고 css작업을 하는 것이 좋을 것 같다.
+
+4. 속성, 메소드, 이벤트
+
+5. v-slot
+
+6. 모달
+
+- 밝기 조절은 opacity가 아니라 백그라운 컬러 색상에서 밝기로
+
+7. $emit
+
+8. $event : 이벤트 객체가 전달됨
