20230503 공부 : Spring Security 복습

--- a/학원배운거정리/23주차.md
+++ b/학원배운거정리/23주차.md
@@ -61,3 +61,20 @@ public interface MemberRepository extends JpaRepository<Member, Integer> {
 7. vue-router 설정
 
 8. 쌤은 router 설정에서 url 를 모아두지 않는다. 점점 길어짐.
+
+## 5월 3일 수요일
+
+1. Single sing On 방식이 유행했지만 보안 상의 이유로 사그라들었다.
+
+2. 프론트 단에서 사용자가 인증정보를 가지고 있는지 페이지 이동간에 계속 체크하는 법.
+
+- 서버쪽에서 체크하는 법.
+
+3. Openauth
+
+- 하나의 계정으로 여러 곳에서
+
+4.  모든 url에 보안을 요구하지 말고 내가 원하는 url에만 보안을 요구해!
+
+- url에 맞는 role에게만 허용하라.
+- anyRequest().permitAll : 그냥 다
